Latest update. With thesis template from Yujie Yuan.

--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -298,7 +298,7 @@
 	title={Eclemma-jacoco java code coverage library},
 	author={Hoffmann, Marc R and Janiczak, B and Mandrikov, E},
 	year={2011}
-	
+
 }
 @article{wong2016survey,
 	title={A survey on software fault localization},
@@ -392,7 +392,7 @@
 	series = {ESEC/FSE 2017},
 	year = {2017},
 	pages = {245--256}
-} 
+}
 
 @inproceedings{stackmine,
 	author = {Han, Shi and Dang, Yingnong and Ge, Song and Zhang, Dongmei and Xie, Tao},
@@ -400,7 +400,7 @@
 	booktitle = {Proc. ICSE},
 	year = {2012},
 	pages = {145--155},
-} 
+}
 
 @inproceedings{toddler,
 	author = {Nistor, Adrian and Song, Linhai and Marinov, Darko and Lu, Shan},
@@ -408,7 +408,7 @@
 	booktitle = {Proc. ICSE},
 	year = {2013},
 	pages = {562--571},
-} 
+}
 
 @inproceedings{testseq,
 	author    = {Valentin Dallmeier and
@@ -431,7 +431,7 @@
 	location = {Hyderabad, India},
 	pages = {1013--1024},
 	numpages = {12},
-} 
+}
 
 @inproceedings{complexityAnalysis,
 	author = {Simon F. Goldsmith and Alex S. Aiken and Daniel Shawcross Wilkerson},
@@ -449,7 +449,7 @@
 	isbn = {0-89791-074-5},
 	pages = {120--126},
 	numpages = {7}
-} 
+}
 
 @inproceedings{dynamiccallgraph,
 	author    = {Byeongcheol Lee and
@@ -460,7 +460,7 @@
 	booktitle = {Compiler Construction (CC)},
 	pages     = {80--95},
 	year      = {2007},
-	
+
 }
 
 @inproceedings{dallmeier2005lightweight,
@@ -485,14 +485,14 @@
 	year = {2018},
 	pages = {486--497},
 	numpages = {12}
-} 
+}
 @inproceedings{fan2018large,
 	author = {Fan, Lingling and Su, Ting and Chen, Sen and Meng, Guozhu and Liu, Yang and Xu, Lihua and Pu, Geguang and Su, Zhendong},
 	title = {Large-scale Analysis of Framework-specific Exceptions in Android Apps},
 	booktitle = {Proceedings of the 40th International Conference on Software Engineering},
 	series = {ICSE '18},
 	year = {2018},
-	pages = {408--419} 
+	pages = {408--419}
 }
 
 @article{Jaccard1901Etude,
@@ -517,7 +517,7 @@
 	booktitle = {ECOOP},
 	pages     = {220--242},
 	year      = {1997},
-	
+
 }
 
 @article{van2013dynamic,
@@ -638,7 +638,7 @@
 	url={https://developer.android.com/reference/android/app/Activity},
 	month = {09},
 	year = {2018},
-	
+
 }
 
 @online{HandlerA26:online,
@@ -1086,6 +1086,13 @@
 	title = {McAfee Mobile Threat Report Q1, 2018}
 }
 
+@techreport{ChineseAppStoreReport,
+	author = {iiMedia Group},
+	year = {2018},
+	citedate = {February 23, 2020},
+	title = {2018-2019中国中国移动应用商店市场监测报告}
+}
+
 @online{LIFTOFF_report,
 	author = {LIFTOFF},
 	year = {2018},
@@ -1104,6 +1111,14 @@
 	title = {Analysys {Figure}},
 	url = {http://zhishu.analysys.cn/},
 	citedate = {September 26, 2018}
+}
+
+@online{MobileOSMktShare,
+	author = {StatCounter},
+	year = {2019},
+	url = {https://gs.statcounter.com/os-market-share/mobile/worldwide/#yearly-2009-2020},
+	citedate = {February 23, 2020},
+	title = {Mobile Operating System Market Share Worldwide, 2009 - 2020}
 }
 
 % Reports
@@ -1167,7 +1182,7 @@
 }
 
 @online{Baiduappstore,
-	title = {Baidu {App Store}},
+	title = {Baidu App Store},
 	url = {https://shouji.baidu.com/},
 	citedate = {September 26, 2018}
 }
@@ -1178,10 +1193,20 @@
 	citedate = {September 26, 2018}
 }
 
+@online{Xiaomiappstore,
+	title = {Xiaomi App Store},
+	url = {http://app.mi.com/},
+	citedate = {February 23, 2020}
+}
+
 @online{Myapp,
 	title = {Myapp},
 	url = {http://sj.qq.com/myapp/},
 	citedate = {September 26, 2018}
 }
 
-
+@online{GooglePlay,
+	title = {Google Play},
+	url = {https://play.google.com/store/apps},
+	citedate = {February, 23, 2020}
+}
