--- a/edwin_2019/A3-COPYRIGHT.tex
+++ b/edwin_2019/A3-COPYRIGHT.tex
@@ -1,22 +1,23 @@
 \pagestyle{empty}
 \centerline{\bf\Large 华东师范大学学位论文原创性声明}
 
-\vskip 0.6cm
+\vspace*{1em}
 
 \normalsize \indent
 郑重声明：本人呈交的学位论文《\TheisName》，是在华东师范大学攻读硕士/博士（请勾选）学位期间，在导师的指导下进行的研究工作及取得的研究成果。除文中已经注明引用的内容外，本论文不包含其他个人已经发表或撰写过的研究成果。对本文的研究做出重要贡献的个人和集体，均已在文中作了明确说明并表示谢意。
 
-\vskip 0.6cm
+\vspace{0.5em}
 
 \qquad\qquad{作者签名}:$\underline{\qquad\qquad\qquad }$
 \qquad \qquad\qquad \mbox {日期}:\qquad 年 \qquad  月 \qquad  日
 
 
-\vskip 0.8cm
+\vspace{2em}
 
 \centerline{\bf\Large 华东师范大学学位论文著作权使用声明}
 
-\vskip 0.6cm
+\vspace*{1em}
+
 《\TheisName》系本人在华东师范大学攻读学位期间在导师指导下完成的硕士/博士（请勾选）学位论文，著作权归本人所有。
 本人同意华东师范大学根据相关规定保留和使用此学位论文，并向主管部门和学校指定的相关机构送交学位论文的印刷版和电子版；
 允许学位论文进入华东师范大学图书馆及数据库被查阅、借阅；
@@ -35,10 +36,10 @@
 \qquad\qquad \mbox{导师签名}:$\underline{\qquad\qquad\qquad\qquad}$
 \qquad\qquad \mbox {本人签名}:$\underline{\qquad\qquad\qquad\qquad }$
 
-\vskip 0.3cm
+\bigskip
 
 $\rightline{ \qquad 年 \qquad  月 \qquad  日 \qquad\qquad}$
 
-\vskip 0.6cm
+\vspace*{1em}
 
 \small{* “涉密”学位论文应是已经华东师范大学学位评定委员会办公室或保密委员会审定过的学位论文（需附获批的《华东师范大学研究生申请学位论文“涉密”审批表》方为有效），未经上述部门审定的学位论文均为公开学位论文。此声明栏不填写的，默认为公开学位论文，均适用上述授权）。}
