--- a/edwin_2019/chapter-background.tex
+++ b/edwin_2019/chapter-background.tex
@@ -1,213 +1,201 @@
-\chapter{Android系统介绍 }  
+\chapter{Android背景介绍}
 \label{chp:background}
 
+本章主要介绍Android系统、Android应用程序和应用市场相关的背景知识，包括现有的Google Play市场和多个第三方市场共存的局面介绍，同时也会介绍仿冒应用和Android安全证书机制的相关知识。
 
-本章首先简要介绍Android系统架构，然后对Android中的Activity组件做基本介绍，最后着重介绍Android中常见的两种多线程交互方式。
+\section{Android系统介绍}
+Android系统是属于Google公司的开源操作系统，基于Linux内核研发。
+其最早版本于2008年发布（Android 1.0），起先只针对手机端发布。
+由于具有图形化操作界面，并且采用触屏作为交互方式，极其简单易用，Android系统自发布起就迅速在智能手机领域抢占大量市场份额，搭载Android系统的平板电脑也在我们的日常生活中渐渐变得随处可见。
+近年来，随着IoT（Internet of Things，物联网）的发展，家用电器趋向智能化，不少电视厂商、机顶盒厂商、甚至可穿戴设备厂商也开始为产品内嵌深度定制的Android系统，为用户提供更好的体验。
 
-
-\section{Android系统架构}
-
-Android是基于Linux内核开发的的开源操作系统，隶属于Google公司，主要用于触屏移动设备如智能手机、平板电脑与其他便携式设备，是目前世界上最流行的移动终端操作系统之一。
-
-
-在系统架构上，Android自下到上，可以分为四层：Kernel层、Library和Android Runtime(Dalvik/ART)、Framework、Application，如~\autoref{fig:Android-Framework}所示。
-Kernel层是硬件和软件层之间的抽象层，主要是设备的驱动程序，例如：显示驱动、音频驱动、蓝牙驱动、Binder IPC驱动等。
-Library和Android Runtime(Dalvik/ART): Library，顾名思义就是向上层提供各种这样的基础功能，例如SQLite数据库引擎，Surface Manager显示系统管理库。
-Android Runtime主要是运行Android程序的虚拟机\eat{，在不同版本的系统上对应着不同的虚拟机，例如在Android 5.0及以上是ART，而在Android 4.3及以下是Dalvik，而Android 4.4两者都有}。
-Framework层主要是系统管理类库，包括Activity的管理，消息通知的管理；同时，它是Application的基础架构，为应用程序层的开发者提供了API，可简化应用程序的开发过程。
-而Application就是我们平时接触的应用，例如通讯录、电话、浏览器等。
-
-虽然Android应用程序是使用Java语言开发的，但是它和传统的Java程序有着很大的不同，具体有如下几点：
-
-\begin{figure*}[!h]
+\begin{figure}
 	\centering
-	\includegraphics[height=0.6\textheight]{./Figures/Android-Framework.png}
-	\caption{Android系统框架图}
-	\label{fig:Android-Framework}
+	\includegraphics[width=\textwidth]{./Figures/edwin-StatCounter-os-mkt-share-yearly-2009-2020.jpg}
+	\caption{2009至2020年移动端操作系统市场份额变化图}
+	\label{fig:Android-Mkt-Share}
+\end{figure}
+
+图~\ref{fig:Android-Mkt-Share}展现了2009年到2020年间不同移动端操作系统对市场占有率的变化曲线，图表来源于数据分析机构StatCounter~\cite{MobileOSMktShare}，图表X轴为时间线，Y轴为市场份额占总量的百分比。
+不同颜色的曲线代表不同操作系统，其中Android系统由橘红色曲线表示。
+从图中数据可知，自发布以来，Android系统便一路高歌猛进，迅速占据移动端操作系统市场，从2012年起就获得了业界第一的市场份额占有率，直到2020年，其超过70\%的市场占有率依然遥遥领先于其他操作系统。
+其中原因，除了对用户非常友好的操作方式以外，也在于其具有一个多元、开放又充满活力的应用程序生态环境。
+
+\section{Android应用程序}
+
+\subsection{应用程序简介}
+
+Android应用程序（Android Application，简称App）是可以安装在Android系统上、拓展系统功能的软件，这些软件通常基于Java语言开发，其中可以包含用C语言或者C++编写的库以提高性能。
+2014年起，Google宣布Android支持Kotlin编程语言，自此开发者也可以使用Kotlin语言进行Android App开发。
+
+Android App的开发需要使用Google提供的软件开发工具包（Software Develop Kit，简称SDK）和Google支持的集成开发环境（Integrated Development Environment，简称IDE）。
+SDK是包含了众多软件包的工具箱，其中有包括了Android系统应用程序接口（Application Programming Interface，简称API）的函数库和用以编译App的各种工具，在编译完成之后，开发者还可以利用SDK的相应工具为App签上自己的数字签名。
+API函数库提供了Android系统的一系列接口，开发者需要在使用Android App框架的前提下，调用各种API实现自己设计的功能。
+
+在发布每一版本Android系统的同时，Google公司也会发布一个新版本的Android SDK供开发者开发App。
+每个人都可以从Android的官方网站上下载Android SDK和开发应用所需的IDE，这意味着，利用官方发布的工具，任何人都可以开发出属于自己的Android App。
+
+\subsection{构建应用程序}
+
+\begin{figure*}
+	\centering
+	\includegraphics[width=0.6\textwidth]{./Figures/edwin-build-process-CHN.png}
+	\caption{Android App构建流程}
+	\label{fig:Android-Build-Process}
 \end{figure*}
 
+与大部分软件一样，开发者在发布自己的App之前，也先需要把代码编译打包成Android操作系统使用的一种应用程序包格式文件APK（Android application package）。
+图~\ref{fig:Android-Build-Process}展现了APK文件的构建流程。
+一般来说，一个Android App的构建流程会分为以下四步，整个构建流程由Android SDK中的Android插件和Gradle构建工具管理。
 
-\textbf{基于事件驱动的系统架构：}
-在设计上，Android应用程序的系统架构为事件驱动架构。在开发过程中，没有传统程序中入口函数的概念。
-应用程序中通用的业务逻辑（例如应用程序如何启动退出、应用的窗口如何创建销毁等）存在于Android Framework中。
-%这也使得Android应用程序的分发文件（即APK文件）相对较小。
+\textbf{首先，开发者需要编写App对应的源代码，然后连同一些源代码中使用到的依赖项一起输入到编译器中生成DEX文件。}
+源代码可以由Java语言或者Kotlin语言编写，而DEX文件则是一种可执行文件，可以运行于Dalvik虚拟机上。
+Dalvik虚拟机则是Android系统的核心组成部分之一，用于运行被编译为DEX文件的程序。
+此外，编译器还会将其他未被编译的资源文件转换为编译后的资源。
 
-\textbf{面向组件的编程模式：}
-Android程序中，常见的组件有Activity、Service、Content Provider、Broadcast Receiver，它们是应用程序运行的最小单元，具有组件特有的生命周期，生命周期受到Android Framework的直接调度。
-开发人员通过继承这些组件，重写对应的生命周期函数，实现对应的业务需求，例如界面的布局、页面状态的保存。
-%而这些组件的生命周期由Framework直接调度完成。
+\textbf{然后，SDK中的APK打包器会将DEX文件和已经编译好的资源文件一起打包。}
+APK文件的本质是压缩文件，其中包含了被编译的代码文件、App需要用到的资源文件（比如字符串、图片等资源）、assets资源、App的安全证书和Manifest配置文件，所以APK打包器的任务是将这些所有文件都压缩进一个APK文件里面。
+不过，在这个步骤，APK打包器还未将所有文件压缩。
+因为在压缩之前，还需要进行下一步的签名。
 
-\textbf{逻辑实现依赖于回调函数和多线程通信：}
-由于Android应用程序采用的是基于单线程消息队列的事件驱动架构，界面相关的操作只允许出现在主线程（UI Thread）中，耗时操作只能在工作线程（Worker Thread）中进行。
-具体而言，开发人员往往会借助回调函数处理控件的响应事件，利用多线程交互串联界面相关操作和耗时操作，完成对应的业务。
+\textbf{在第三步，APK打包器会使用密钥库文件对上一步中提及的资源文件和代码文件进行数字签名。}
+这个步骤是用作校验APK文件是否被篡改、保证APK文件完整性的一个重要步骤，在本章后续内容中会有相关机制的更多介绍。
 
-
-\section{Android中的Activity组件}
-
-
-
-在Android应用程序运行过程中，Activity向用户展示图形界面，响应用户的反馈，和其它组件一同完成相关业务，扮演着最为重要的角色。%\cite{Activity2:online}。
-由于Android应用程序在架构选型上采用了事件驱动模型，为了便于协调应用内部状态的管理，Android组件通常有生命周期的概念，Activity也不例外。
-Android系统将Activity的运行状态分为以下四种，Activity的生命周期就是Activity在这些状态之间的跳转。
+\textbf{最后，APK打包器会使用zipalign工具对应用进行优化，以减少App在设备上运行时所占用的内存。}
+这步结束之后，整个构建流程也随之结束。
+开发者会获得一个编译好、签名完毕并且经过优化的APK压缩文件，然后就可以将这个APK文件安装到Android设备上运行使用。
 
 
+\section{Android应用市场}
+由于每个人都可以开发、构建自己的Android App，从网上发布的App数不胜数。这种开放性为Android应用生态带来开放性的同时，也会引入以下几个问题：
 
-\begin{itemize}
-		\setlength{\itemsep}{-5pt}
-		
-	\item 运行态：在该状态下， Activity处于页面最前端时，用户可以与Activity进行交互。
-	一般而言，用户可见并可以进行交互的Activity均处于这个状态。
-	
-	\item 暂停态：在该状态，Activity仍然可见，但是失去了窗口的焦点。
-	当一个Activity之上出现非全屏的窗体（例如对话框）但未被完全遮挡时，Activity就处于这个状态。
-	处于暂停状态的Activity仍处于存活状态，保存着所有的内存数据。%，只有当系统内存极度紧张时，才有可能被系统杀死回收。
+\textbf{1) 难以择优}
 
-	\item 停止态：当一个Activity被其他的Activity完全遮挡时，处于这个状态。
-	处于该状态的Activity仍然可以保留所有的内存数据，只是对用户不可见。
-	系统在需要内存的情况下，可以采用相应的策略对Activity进行杀死回收操作。
-	
-	\item 终止态：当用户自动退出Activity时，Activity将进入该状态；当Activity处于暂停态或者停止态时，系统由于内存原因可能会将上述两种Activity杀死并回收。
-\end{itemize}
+开放的环境会导致App数量难以胜数。由于从互联网上找到的App质量良莠不齐，用户有时无法判断网上的应用是否符合自己的需求；
 
+\textbf{2) 数据安全}
 
+智能手机与现代人的日常生活息息相关，其中也自然包含了各人的隐私数据甚至财产信息。确保用户下载、安装到的应用不会损害到他们的财产安全和数据安全至关重要；
 
-\begin{figure*}[!ht]
+\textbf{3) 宣传渠道}
+
+开发者希望自己的App尽可能地受欢迎，但中小开发者并没有足够的资源去宣传自己的应用，可能会导致原本质量优秀的App因为缺少宣传渠道而无人问津；
+
+\textbf{4) 收入结算}
+
+开发者有从App中获得盈利的需求。即使是部分出于兴趣或其他非盈利目的开发手机应用的开发者，也需要从App中获取补贴以维持App的维护和正常运作。如何利用App变现、变现之后又要怎样将资金回流到开发者的问题有待解决；
+
+\textbf{5) 应用更新}
+
+随着时间推进，用户的需求并非一成不变，开发者也需要针对App中以往出现的漏洞查漏补缺、或者更新软件功能，但要求用户定期/不定期地手动更新某个App甚至多个App并不现实。
+
+Google发布的应用商店Google Play~\cite{GooglePlay}的存在缓解了以上的问题。它是Android操作系统的官方应用商店，可以让用户浏览和下载商店中的App。
+一方面，普通用户可以经由Android系统中预装好的Google Play服务寻找、购买和下载心仪的App；另一方面，Google Play也允许开发者将App通过开发者账户上传到Google Play中，在经过一系列的审查之后上架到商场上供用户下载。
+
+与上述的四个问题对应，Google Play应用商店提供了以下几点服务：
+
+\textbf{1) 一个由官方背书的下载渠道}
+
+这确保了用户下载的App得到官方认可。同时，Google Play也提供了一个关于App的社区条件，用户可以对App进行打分、评论，用户对App的评价经审核后可以由所有其他用户查看，直接影响其他用户对``是否要下载某款应用''的决定；
+
+\textbf{2) 上架之前的应用审核}
+
+在开发者上传App时对App作出一定的审查，以排除部分恶意开发者在商场中上架病毒和恶意应用的可能性。Google Play也会根据用户反馈、应用本身运营数据等原因于每季度从商店中移除一部分App，以保证商店货架上App的质量；
+
+\textbf{3) 作为激励机制的推荐榜单}
+
+在用户评价的基础上，Google Play筛选出一部分质量优异的App制订出一些推荐榜单。推荐榜单会在应用商店首页进行展示，榜单包括``编辑精选''、``热门应用''、``年度之选''等，其中既有大公司开发的App，也会有中小开发者独立开发的应用。此外，Google还会通过用户的使用习惯、所在地区等因素为用户提供个性化推荐（如图~\ref{fig:Google-Play-Main}所示），在不同的App类别下，也有不同榜单为用户推荐，加大了优秀App的曝光率；
+
+\begin{figure}
 	\centering
-%	\includegraphics[width=0.9\textwidth]{./Figures/Activity-lifecycle.png}
-	\includegraphics[width=0.9\textwidth]{./Figures/Activity-lifecycle-Landscape.png}
-	
-	\caption{Activity的生命周期}
-	\label{fig:Activity-lifecycle}
-\end{figure*}
+	\includegraphics[width=\textwidth]{./Figures/edwin-google-play.jpg}
+	\caption{Google Play应用商店首页（从桌面端浏览）}
+	\label{fig:Google-Play-Main}
+\end{figure}
 
-Activity的生命周期受到Activity在运行时的内存分布、环境状态以及业务逻辑的影响，由Android系统直接负责调度。
-和{Activity}生命周期相关的方法包括\code{onCreate()}、 \code{onStart()}、\code{ onResume()}、 \code{onPaused()}、 \code{ onStop()}和\code{onDestroy()}等，方便开发人员在Activity的状态发生变化时对程序的运行时数据和应用状态做适当的处理操作。
-{Activity}的生命周期如\autoref{fig:Activity-lifecycle}所示：
+\textbf{4) 集中的结算通道}
 
+Google Play应用商店为开发者提供了一个统一的结算渠道。应用开发者可以在App内销售商品，然后选择Google Play提供的集成结算服务。用户在购买服务时，直接向Google付款，Google再在每个结算周期将款项结算给开发者。这样一来，开发者尤其是独立开发者就可以更专注于App本身的开发，而不需要考虑如何利用应用变现、再将资金回收的复杂问题。Google Play也允许开发者将自己的App上架为付费应用，需要用户付款后才可下载；
 
+\textbf{5) 方便快捷的更新推送}
 
-当用户点击应用图标，系统启动应用程序后，系统会创建、启动Activity并使之可以和用户进行交互。
-在这个过程中，\code{onCreate()}、\code{onStart()}、\code{onResume()}等方法被回调，Activity最终处于运行态；
+由于Google Play本身是个应用程序的集中平台，而且也预置到了大多搭载Android的设备中，所以开发者在更新应用时，只需将新版本上传到Google Play的后台，应用商店经过审核之后，就可以将新版本的应用推送到用户的设备中，让用户设备中的App实现自动更新，免去双方的麻烦。
 
+\section{第三方应用市场}
 
-当Activity被其它窗体遮挡，虽然失去交互焦点，但仍处于可见状态时，Activity的状态从运行态变成暂停态，\code{onPause()}方法会被回调；当Activity重新获得焦点时，\code{onResume()}方法会被调用；
+Google Play应用商店无疑为用户和开发者都提供了一个优良的解决方案，每个应用底下由用户评论组成的社区也促成了用户和开发者之间的交流，用户反馈直接推动了开发者对应用的改良。
 
-当Activity切换到另一个Activity时，原来Activity将从运行态变为停止态，\code{onPause()}、\code{onStop()}等方法会被调用；
-当返回原来的Activity时，\code{onStart()}、\code{onResume()}等方法会被调用，Activity从暂停态变为运行态。
-%将从从运行态变成暂停态时，Activity只失去焦点，仍处于可见状态，\code{onPause()}方法会被回调；当Activity重新获得焦点时，\code{onResume()}方法会被调用；
+遗憾的是，由于种种原因，Google Play应用商店的服务并非对全球的所有地区和国家都开放。
+Google从2008年开始退出中国大陆市场，因此Google的大部分服务，包括Google Play应用商店的下载服务在内，都不向中国大陆境内用户提供。
+换句话说，国内的大部分普通用户并不能享受到Google Play应用商店的便利。
 
-当用户点击“返回键”返回到桌面时，Activity会失去焦点，在用户的视野中消失，直至被系统回收，
-对应的状态也从运行态经过暂停态、停止态，最终变为终止态，期间\code{onPause()}、\code{onStop()}、\code{onDestroy()}等方法被回调。
+为此，国内有多家厂商都推出了自己开发的应用市场服务，试图填补这一片市场空白。
+实际上，由于整合开发者、用户和App资源三者本身就有巨大的市场潜力，所以即使是在Google Play服务可用的其他国家和地区，也有厂商推出自己的应用市场（如三星推出的三星应用商店、Amazon推出的Amazon应用市场），试着在这个市场上分一杯羹。
 
-\eat{
-当用户从一个界面回到原来的界面时，原来的Activity从停止态重启，出现在设备界面上，获得交互焦点，
-\code{onStart()}、\code{onResume()}等方法被回调；
-}
+纵观国内的应用市场，经过几年的竞争与整合，依然未有出现像Google Play应用商店一样具有垄断性地位的厂商。
+多个厂商各据一方，主要可以分为两个类别。
+一类是国内IT行业巨头旗下的应用市场，如腾讯旗下的应用宝~\cite{Myapp}和百度旗下的百度应用市场~\cite{Baiduappstore}，其平台本身就具有大量基础用户，可以直接转化为应用市场中的活跃用户；另一类则是由各大手机厂商开发的应用市场，如华为的应用市场、小米的小米应用市场~\cite{Xiaomiappstore}等，这类的应用市场通常直接预装在手机出厂时自带的厂家定制Android系统中，凭借手机销量直接带动市场用户增长。
 
+根据数据分析机构艾媒咨询于2018年12月发布的《2018-2019中国中国移动应用商店市场监测报告》~\cite{ChineseAppStoreReport}显示，使用第三方移动应用商店的用户在手机网民中占比为59.99\%。结合国内网民数目庞大的现状，这一数字表示第三方应用市场在国内已被广泛接受。而40.01\%未使用第三方移动应用商店的用户比例则表示这一市场还有广阔前景。该报告还提供了2018年国内第三方应用市场用户首选市场的分布图，如图~\ref{fig:CHN-Mkt-Dist}所示，用户对第三方移动应用市场的选择主要还是集中在国内IT巨头发布的应用市场上。约40\%的手机用户会使用360旗下的360手机助手作为首选应用市场，而首选使用豌豆荚、UC应用商店等阿里应用分发平台旗下应用商店的用户约占11\%。大部分市场份额都已被国内IT巨头旗下的应用市场占领。
 
-\section{Android中的多线程交互}
-Android系统在架构设计上采用了事件驱动架构。在多线程并发访问时，若控件对于各线程均是可见的，并发对控件做读写操作会使控件处于不可预期的状态；
-若贸然对控件使用锁机制，访问控件的各个线程之间存在竞争关系，阻塞相关线程业务逻辑的执行，使得应用变得复杂低效。
-%上述情况对于应用程序都是不可接受的。
-为了避免此类低效率问题，Android系统在设计事件驱动架构时，采用了单线程的消息队列，即只允许在主线程（也称为UI线程）进行界面更新操作，不允许在其他线程（也称为工作线程）进行界面更新操作。
-另外，为了保证应用程序界面渲染和事件响应的及时性，任何在主线程上产生的耗时操作（例如加载磁盘上的图片、网络请求等）都是不被允许的。
-换而言之，当应用程序需要进行耗时操作时，这个操作往往会在一个新的线程中执行，而不是在主线程中。
-
-
-Android系统架构中的单线程消息队列以及主线程的非阻塞性，使得界面更新和耗时操作分散在不同的线程中。
-这也导致了多线程交互在Android应用程序运行过程中十分常见。
-从整体上，系统提供的交互方式分为两种：基于Java的多线程交互和基于Handler的交互方式。%\cite{androidSourceCode}。
-
-\subsection{基于Java的多线程交互}
-
-Android应用程序是在Java的基础上开发的，因此，开发人员可以采用和Java应用相同的调用方式启动工作线程，并在对应的线程上完成业务逻辑。
-但是，Java API只能实现业务逻辑从原有线程转移到新的工作线程上，不能重新返回到主线程上。
-为此，Android系统在Java API的基础上还提供了API \code{void runOnUiThread (Runnable runnable) }。
-该API可以帮助开发人员将业务逻辑的执行从工作线程转移到主线程上，该API也符合Android只允许在主线程上更新界面这一基本设计原则。
-但是，该API也存在着一些弊端，例如\code{runOnUiThread(Runnable)} API的定义位于类\code{android.app.Activity}。
-这也就意味着，当业务逻辑的上下文脱离了Activity这一组件，将无法通过该API将业务逻辑转移回主线程，
-同时基于接口的函数参数定义方式对于跨线程的参数传递也不是十分友好。
-为此，Android提供了基于Handler的多线程交互方式。
-
-\subsection{基于Handler的多线程消息调度}
-
-为了满足开发人员多样化的业务在多线程间的切换，Android提供了基于Handler消息调度的多线程交互方式。
-
-
-
-\begin{figure*}[h]
+\begin{figure}
 	\centering
-	\includegraphics[width=0.9\textwidth]{./Figures/handler-code.png}
-	\caption{Handler的使用实例}
-	\label{fig:handler-code}
-\end{figure*}
+	\includegraphics[width=0.5\textwidth]{./Figures/edwin-CHN-mkt-dist.png}
+	\caption{2018中国第三方移动应用商店用户首选使用品牌分布}
+	\label{fig:CHN-Mkt-Dist}
+\end{figure}
 
+与Google Play提供一个完整的Android生态环境相似，上述的各个厂商也致力于构建各自的Android应用生态链条：各大厂商本身就具有一定知名度，从其旗下的应用市场下载应用能让用户放心；开放开发者中心，让开发者注册账号后上传自己制作的App；为每一个App提供评分和评论功能，构建出开发者和用户的交流平台；在应用市场首页设置应用排行榜、推荐安装软件等榜单（如图~\ref{fig:mkt-yyb}），提高优秀App的曝光率；应用市场自带的应用版本管理开发者在市场后台更新应用之后，将更新推送到用户的手机上；各大应用市场也会整合支付平台（如支付宝和微信支付）来应对市场内的应用购买业务，华为应用市场甚至像Google Play一样，为市场上的应用提供了自家的支付渠道以支持应用内的付款项目购买功能。
 
-\autoref{fig:handler-code}为关于Handler的使用示例。
-图中对应的场景为应用由于业务需要获取一个字符串，并将这个字符串展现在用户界面上。
-考虑到获取字符串的过程比较耗时，可能会阻塞主线程的相关业务，因此我们会在工作线程执行这部分逻辑（如\autoref{fig:handler-code}-左所示），而在主线程执行信息展现的逻辑（如\autoref{fig:handler-code}-右所示）。
-具体而言，在工作线程中，用户生成的字符串和对应的逻辑代码\code{MSG\_CHANGE\_TEXT}封装到{Message}对象中，通过Handler发送出去；
-Handler在主线程中收到该{Message}对象时，会根据逻辑代码（即\code{Message.what}的值）决定进行对应的逻辑处理（本例中，对应逻辑为更新界面信息）。
-
-
-%用户在工作线程执行生成一个字符串，将生成的字符串传递给Message对象，并通过Handler对象通知主线程进行界面更新。
-%当开发人员需要当前业务逻辑转移到其他线程时，通过方法\code{Message.obtain()}获取一个Message，
-%或者将对应的参数传递给Message中的参数字段，最后通过Handler对象发送给指定的消息队列。
-%当目标线程的消息队列读取到这条消息时，便会在该线程中执行预定的业务逻辑。
-
-
-
-\begin{figure*}[hb]
+\begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{./Figures/Handler-apis.png}
-	\caption{ Handler 各API之间的调用关系}
-	\label{fig:handler-apis}
-\end{figure*}
+	\includegraphics[width=0.8\textwidth]{./Figures/edwin-yyb.jpg}
+	\caption{腾讯应用宝应用市场首页（从桌面端浏览）}
+	\label{fig:mkt-yyb}
+\end{figure}
 
+不同于在Android系统发布早期就存在的Google Play应用商店，国内的第三方应用商店是后期出现的产物，一出现就面临着激烈的市场竞争。
+一方面，在国内各类第三方应用市场方兴未艾之时，国内的Android开发者社群尚未成熟，应用市场还未有大量开发者进驻；
+另一方面，在成立初期，为了抢占市场份额，各个应用商店都想方设法将商店内App的种类和数量最大化，以迎合市场用户各种各样的需求。
+作为结果，各类第三方应用市场都在各个渠道搜集App，而非通过开发者上传的方式获得货架上的应用程序。
+由于在早期各种监管渠道尚未完善，各个市场在搜罗各类App的同时，难免会将大量的盗版应用也一并收录。
 
-除了示例中的调用方式，Android 系统还提供多种API\cite{HandlerA26:online}（如\autoref{fig:handler-apis}所示），同时支持基于{Runnable}的消息调度和基于逻辑代码的消息调度：
-%开发人员可以通过\code{post(Runnable)}，\code{postAtTime(Runnable，long)}，\code{sendMessage(Message)}，\code{sendMessageDelayed(Message，long)}，\code{sendMessageAtTime(Message，long)}和\code{sendEmptyMessage(int)}等多种API形式实现消息调度。
- 通过分析Android系统相关源代码，我们发现Android系统提供的Handler API间调用关系如\autoref{fig:handler-apis}所示。
- 所有的Handler API最终都会调用到Handler类的私有方法\code{enqueueMessage(MessageQueue, Message, long)}。
+\section{Android App签名机制}
 
+前文提到，开发者在使用Android SDK构建App时，其中十分重要的一步是对App进行数字签名。
+实际上，Android的数字签名和安全证书机制基于RSA公共密钥系统，是Android安全机制中不可或缺的一个部分。
+本章的余下内容将会对Android App的签名机制进行简单分析。
 
-从整体上看，Handler机制主要由Handler、Looper、MessageQueue、Message等若干部分共同构成。
-%\begin{enumerate}
-%		\setlength{\itemsep}{-5pt}
-%\item
- Message是多线程交互的核心载体；
-%无论开发人员以何种形式调用了Handler发送消息，相关的参数最后均会被封装到Message对象中。
-考虑到移动设备的硬件限制以及Message使用的频繁性，Android系统通过对象池对Message对象进行管理。
-%\item 
-MessageQueue是一个双端队列，存放所有待处理的Message对象。
-%开发人员可以根据具体业务场景在消息队列的头部、尾部或者适当位置插入消息队列。
-%\item 
-Looper负责消息的分发。
-%一个线程最多只允许只有一个Looper对象，他只能绑定一个与之对应的MessageQueue；
-%其中最为常见的就是位于主线程的MainLooper，它主要负责Android系统的日常调度（例如Activity的生命周期、控件的点击事件响应等）。
-%\item
-作为消息的发送者和消费者，Handler负责将消息发送到对应的MessageQueue中以及消费来自Looper分发下来的Message。
-%在一个应用中，Handler可以存在多个对象，一个Handler对象也可以同时扮演生产者和消费者两个角色。
-%\end{enumerate}
-Handler机制中各组成部分的相互关系如\autoref{fig:handler-framework}所示。
-当用户要通过Handler传递消息时，用户将调用系统提供的Handler API，
-该API会将通过分发方法\code{Handler.enqueueMessage(MessageQueue, Message, long)}将消息投递到消息队列MessageQueue中；
-当Looper从MessageQueue中读取该Message对象，分发给对应的Handler对象；
-最终，Handler对象通过方法\code{Handler.dispatchMessage(Message)}调用方法\code{Handler.handleMessage(Message)}，按照Message对象进行业务逻辑处理。
-\begin{figure*}[!ht]
-	\centering
-	\includegraphics[width=0.8\textwidth]{./Figures/Handler-framework.png}
-	\caption{ Handler机制}
-	\label{fig:handler-framework}
-\end{figure*}
+Android App的签名机制是用作校验APK文件是否被篡改、保证APK文件完整性的一个重要机制，所有的应用都必须要在经过签名才能安装进Android系统中。
+在签名时，SDK会使用一种密钥库文件，如果开发者还没有这个文件的话，SDK会自动生成一个。
+密钥库中包含了开发者的各种信息，包括一对公钥和私钥。
+私钥用于数字签名，不可向外公布；公钥则是可以向外公布的一组密钥，用于数字前面的验证。
+App中的签名也是系统用来识别开发者的重要依据，因为同一个密钥库文件会产生一致的签名，系统能根据签名中的公钥验证应用识别开发者。
 
-基于Handler的多线程消息调度机制充分利用了Android的事件驱动架构，将业务逻辑抽象出Message对象，借助消息队列在线程间传递Message，达到了Android多线程交互的目的。
-Handler机制，不仅帮助开发人员实现业务逻辑在主线程和工作线程间的自由转移，而且其灵活的API设计降低应用的设计复杂程度，提升了系统架构的可拓展性。
-正因如此，在Android开发过程中，基于Handler消息调度的多线程交互十分常见。
+签名的过程大致如下：
+在前文流程的第二步结束后，编译器会输出DEX文件和编译好的资源文件，这时，SDK会对每个文件都扫描一次，然后对每个文件提取一次数字摘要，再把每个文件的文件名和其对应的数字摘要保存在一个名为\textit{MANIFEST.MF}的文件中。
+之后，SDK会再扫描一次刚才生成的\textit{MANIFEST.MF}文件，再次提取一次数字摘要，把这个摘要连同刚才文件中的所有内容存入另一个新文件\textit{CERT.SF}里。
+第三步，再计算一次\textit{CERT.SF}的数字摘要，然后用密钥库中的私钥对这个摘要进行加密。
+加密后的结果就是数字签名。
+最后，SDK将签名、公钥、计算数字摘要的哈希算法等信息写入\textit{CERT.RSA}文件中，再将这整个过程中生成的四个文件放进\textit{META-INF}文件夹，用APK打包器打包起来。
+至此流程结束。
 
+而Android系统验证签名的方式，则是先通过\textit{CERT.RSA}中的公钥验证签名是否无误，再根据文件中提供的哈希算法计算APK包中所有文件的数字摘要：先从\textit{CERT.SF}开始，然后是\textit{MANIFEST.MF}，然后是APK中的其他所有文件...
+一旦其中出现不相符的结果，就会导致验证失败。
+在安装App的过程中，验证签名失败会使得系统终止App的安装。
+
+换句话说，在一个APK被打包签名完毕之后，如果需要更改其中的内容，就只能在更改后将APK重新打包签名一次，即使是一个bit的修改也会破坏原有的签名。
+这也是系统可以用数字签名识别开发者的原因：签名一致的App，最后一定都是由同一个开发者打包的。
+所以，具有同样签名的App也可以在同一个Android设备上共享数据。
+不过这超出了本文讨论的内容，故按下不表。
+
+目前，签名的模式共有三代，其区别主要在于构建流程第三、第四步之间的一些操作上。
+简单地说，越新的签名模式能越好地保障APK文件的完整性。
+实际上，第一代签名模式V1具有较为致命的缺陷，所以Google官方也在呼吁开发者在编译时采用最新的签名模式。
+
+最后要提及的是，签名机制只能保证APK文件在被篡改之后不能凭借原有的签名被安装进Android系统，但恶意开发者依然可以在篡改APK之后，用自己的密钥库对APK重新签名，构建出可安装的App。
+这种App是盗版App的一种，被称为重打包App。
 
 \section{本章总结}
 
-本章主要介绍了Android系统的相关背景知识，较为详细的阐述了Android的系统结构，详细介绍了Android四大组件之一的Activity生命周期。
-同时，本章还介绍了基于Runnable/Thread、Handler消息调度两种不同的多线程交互方式，详细地分析了Handler的运行机制，为下文基于函数调用图的多线程触发关系生成做了铺垫。
-%最后，本章还介绍了系统在实现上可能遇到的困难。
+本章主要介绍了Android系统、Android应用和Android应用市场的相关背景知识，同时也阐述了Android应用的构建流程和简要介绍了其中使用到的签名机制，为后文实证研究中使用到的采样来源和验证方法做铺垫。
