--- a/2018ZH-NEW/10269_085211_51164500190_LW.tex
+++ b/2018ZH-NEW/10269_085211_51164500190_LW.tex
@@ -13,12 +13,13 @@
 \documentclass[12pt,openany,a4paper,fancyhdr,twoside]{ctexbook}
 
 %draft 选项可以使插入的图形只显示外框，以加快预览速度。
-%\documentclass[11pt,a4paper,openany,draft]{book}
-\usepackage{amsmath} 
+\usepackage{amsmath}
 \usepackage{amssymb}               % AMSLaTeX宏包 用来排出更加漂亮的公式
-%\usepackage[CJKbookmarks]{hyperref}
-\usepackage{url}
-\usepackage[hidelinks]{hyperref}
+
+\usepackage[hyphens]{url}
+\urlstyle{same}
+\usepackage[hidelinks,breaklinks]{hyperref}
+
 \usepackage{shortvrb,indentfirst,ulem,makeidx}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
@@ -26,11 +27,11 @@
 \usepackage{rotating}
 
 
-\usepackage{indentfirst,latexsym,colortbl,subfigure,clrscode}
+\usepackage{indentfirst,latexsym,colortbl,subfig,clrscode}
 
 %\usepackage[ruled,vlined,linesnumbered,]{algorithm2e}
 
-\usepackage[linesnumbered,ruled,vlined,resetcount,algochapter]{algorithm2e}%[ruled,vlined]{  
+\usepackage[linesnumbered,ruled,vlined,resetcount,algochapter]{algorithm2e}%[ruled,vlined]{
 \usepackage{algorithmicx}
 \usepackage{listings}
 \usepackage{algcompatible}
@@ -40,19 +41,11 @@
 \renewcommand*{\algorithmcfname}{算法}
 
 \newcommand{\clearPaperPage}{\clearpage}
-%$\renewcommand{\clearPaperPage}{\cleardoublepage}
-
-
-
+%\renewcommand{\clearPaperPage}{\cleardoublepage}
 
 \SetKwInput{KwIn}{\textbf{输入}}
 \SetKwInput{KwOut}{\textbf{输出}}
 \SetKwInput{KwReturn}{\textbf{return}}
-
-
-\usepackage{bibspacing}
-
-\setlength{\bibitemsep}{2\baselineskip plus .05\baselineskip minus .05\baselineskip}
 
 
 \usepackage{bm}                     % 处理数学公式中的黑斜体的宏包
@@ -95,8 +88,6 @@
 \makeindex
 \pagestyle{fancy}
 
-\newcommand{\eat}[1]{}
-
 \renewcommand{\headrulewidth}{0.4pt}
 \fancyfoot[CO,CE]{\thepage}
 
@@ -104,7 +95,6 @@
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
 
 \newtheorem{Def}{定义}
-
 
 \newcommand{\yihao}{\fontsize{26pt}{36pt}\selectfont}           % 一号, 1.4 倍行距
 \newcommand{\erhao}{\fontsize{22pt}{28pt}\selectfont}          % 二号, 1.25 倍行距
@@ -119,10 +109,11 @@
 
 \newcommand{\tablewuhao}{\fontsize{10.5pt}{12.5pt}\selectfont}    % 五号, 单倍行距
 
-\newcommand{\equwuhao}{\fontsize{11.5pt}{15pt}\selectfont}  
+\newcommand{\equwuhao}{\fontsize{11pt}{13.5pt}\selectfont}
+
 
 \renewcommand*{\bibfont}{\normalfont\normalsize\linespread{1}\selectfont}
-\setlength{\bibitemsep}{\baselineskip}
+
 
 
 
@@ -139,32 +130,34 @@
 
 
 
-\renewcommand{\contentsname}{\hfill\bfseries\Large 目录\hfill}   
+\renewcommand{\contentsname}{\hfill\bfseries\Large {目~~~~录}\hfill}
 \renewcommand{\cftaftertoctitle}{\hfill}
 
-\renewcommand{\listtablename}{\hfill\bfseries\Large 表~~~~格\hfill} 
-\renewcommand{\listfigurename}{\hfill\bfseries\Large 插~~~~图\hfill} 
+\renewcommand{\listtablename}{\hfill\bfseries\Large 表~~~~格\hfill}
+\renewcommand{\listfigurename}{\hfill\bfseries\Large 插~~~~图\hfill}
 
 
 \renewcommand{\listalgorithmcfname}{\centering\bfseries\Large 算~~~~法}
 \newcommand*{\fullref}[1]{\textbf{\hyperref[{#1}]{第\ref*{#1}章~}}}
 
 
-%=============================段前段后定义=============================% 
-\def  \cftbeforetitleskip {35pt}
+%=============================段前段后定义=============================%
+
+
+\def  \cftbeforetitleskip {30pt}
 \def \cftaftertitleskip {25pt}
 %% 目录部分
 \setlength{\cftbeforetoctitleskip}{\cftbeforetitleskip}
 \setlength{\cftaftertoctitleskip}{\cftaftertitleskip}
 
 %% 图目录
-
 \setlength{\cftbeforeloftitleskip}{\cftbeforetitleskip}
 \setlength{\cftafterloftitleskip}{\cftaftertitleskip}
 
 %% 表目录
 \setlength{\cftbeforelottitleskip}{\cftbeforetitleskip}
 \setlength{\cftafterlottitleskip}{\cftaftertitleskip}
+
 %% 算法目录
 %\setlength{\cftbeforeloatitleskip}{30pt}
 %\setlength{\cftafterloatitleskip}{20pt}
@@ -172,34 +165,17 @@
 
 
 
-\CTEXsetup[format={\zihao{3}\heiti\centering}]{chapter}
-\CTEXsetup[format={\raggedright\zihao{4}\heiti}]{section}
-\CTEXsetup[format={\zihao{-4}\heiti}]{subsection}
-
-\CTEXsetup[beforeskip=17pt]{chapter}
-\CTEXsetup[afterskip=16.5 pt]{chapter}
+\CTEXsetup[beforeskip=\cftbeforetitleskip]{chapter}
+\CTEXsetup[afterskip=\cftaftertitleskip]{chapter}
 
 
 
+%===============================概念定义===============================%
 
+\newcommand{\eat}[1]{}
+\newcommand{\weizi}[1]{#1}
 
-\renewcommand{\baselinestretch}{1.5}
-
-%\setlength{\baselineskip}{25pt}  %%正文设为25磅行间距
-
-
-%\CTEXsetup[beforeskip=\cftbeforetitleskip]{chapter}
-%\CTEXsetup[afterskip=\cftaftertitleskip]{chapter}
-
-
-
-
-
-%===============================概念定义===============================% 
-
-
-
-\newcommand{\anonymous}[1]{\phantom{ #1 }}
+\newcommand{\anonymous}[2]{{ #1 }}
 \newcommand{\citeline}[1]{[\citenum{ #1 }]}
 
 
@@ -212,11 +188,11 @@
 \newcommand{\TheisNamePartOne}[0]{构建Android 动态函数调用图：}
 \newcommand{\TheisNamePartTwo}[0]{RunDroid 的设计与实现}
 \newcommand{\ecg}{拓展函数调用图}
-\newcommand{\TheisNameEn}[0]{{\Large Building Android Dynamic Call Graph: }\\ Design and Implement of RunDroid}
+\newcommand{\TheisNameEn}[0]{ Building Android Dynamic Call Graph: \\ Design and Implement of RunDroid}
 
 \newcommand{\code}[1]{\textit{ #1 }}
 \newcommand{\codeInEqu}[1]{ {  \textit{\kaishu \textbf{#1 }}}}
- 
+
 %\renewcommand{\code}[1]{{ \lstinline{#1}}}
 
 
@@ -278,7 +254,7 @@
 
 
 %% 辅助功能显示页边界
-% \usepackage{showframe} % just for the example
+%\usepackage{showframe} % just for the example
 
 \usepackage{etoolbox}
 
@@ -286,6 +262,39 @@
 
 \input{settings-lst}
 
+
+%\CTEXsetup[beforeskip=0mm]{chapter*}
+%\CTEXsetup[afterskip=3mm]{chapter*}
+
+
+%\bibpunct{[}{]}{,}{s}{}{;}
+
+\makeatletter
+\DeclareRobustCommand\citenum
+{\begingroup
+	%      \NAT@swatrue\let\NAT@ctype\z@\NAT@parfalse\let\textsuperscript\NAT@spacechar% DELETED
+	\NAT@swatrue\let\NAT@ctype\z@\NAT@parfalse\let\textsuperscript\relax% NEW
+	\NAT@citexnum[][]}
+\makeatother
+
+\usepackage{bibspacing}
+
+
+\setlength{\bibitemsep}{\baselineskip}
+
+
+\renewcommand{\bibfont}{\normalfont}
+
+
+\usepackage{lipsum}
+
+% ADD THE FOLLOWING COUPLE LINES INTO YOUR PREAMBLE
+\let\OLDthebibliography\thebibliography
+\renewcommand\thebibliography[1]{
+	\OLDthebibliography{#1}
+	\setlength{\parskip}{0pt}
+	\setlength{\itemsep}{0pt plus 0.3ex}
+}
 
 
 
@@ -318,7 +327,7 @@
 \clearPaperPage
 
 %\clearpage{\pagestyle{plain}\clearPaperPage}
-%\textcolor[rgb]{1,1,1}{文本} 
+%\textcolor[rgb]{1,1,1}{文本}
 
 
 \input {B2-TOC.tex}
@@ -330,9 +339,8 @@
 \input {B3-Figure.tex}
 \clearPaperPage
 \input {B4-Table.tex}
-%\clearPaperPage
-%\input {B5-Algorithms.tex}
 
+\input {B5-Algorithms.tex}
 
 
 
@@ -345,6 +353,13 @@
 
 
 
+\CTEXsetup[format+={\zihao{3}\heiti}]{chapter}
+\CTEXsetup[format+={\raggedright\zihao{4}\heiti}]{section}
+\CTEXsetup[format+={\zihao{-4}\heiti}]{subsection}
+
+
+\setlength{\baselineskip}{25pt}  %%正文设为25磅行间距
+
 
 
 % 在章首页添加页眉
@@ -354,10 +369,9 @@
 \fancyhead[RE,LO]{ \leftmark}
 }
 
-
+\raggedbottom
 %\banxiaosi
 \xiaosi
-
 \clearPaperPage
 
 
@@ -391,11 +405,16 @@
 \clearPaperPage
 	\addcontentsline{toc}{chapter}{参考文献}
 	\bibliographystyle{GBT7714-2005}
-	\bibliography{bib/tex}
+	{
 
- \eat{
+	\bibliography{bib/tex}
+}
+
 \clearPaperPage
 
+\input{B6-Symbol.tex}
+
+\clearPaperPage
 
 \fancypagestyle{plain}{%
 	\fancyhead[LE,RO]{华东师范大学硕士专业学位论文}
@@ -403,12 +422,15 @@
 }
 
 
-\addcontentsline{toc}{chapter}{致  谢}
-
 \input {D2-ACHNOWLEDGEMENT.tex}
-}
+
 \clearPaperPage
 
+
+\fancypagestyle{plain}{%
+	\fancyhead[LE,RO]{华东师范大学硕士专业学位论文}
+	\fancyhead[RE,LO]{ 攻读学位期间发表的学术论文}
+}
 
 
 \input {D3-MYACHIEVEMENTS.tex}
@@ -416,4 +438,3 @@
 
 
 \end{document}
-
