--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -9,7 +9,7 @@ RunDroid生产的函数调用图，可以准确的反映应用程序的执行过
 本文的主要工作如下：
 
 
-1） \ecg：本文在传统的函数调用概念的基础上，提出了函数触发关系，用于描述两个方法之间的因果关系；
+1） ：本文在传统的函数调用概念的基础上，提出了函数触发关系，用于描述两个方法之间的因果关系；
 并结合方法触发关系、方法对象等概念提出了拓展函数调用图的概念。
 
 2） RunDroid的设计与实现：
@@ -31,25 +31,6 @@ RunDroid利用源程序代码插桩和运行时方法拦截相结合的方式，
 相比之前技术方案，方法间的因果关系模型更健全，实验的可靠性有所提升。
 %这使得我们的工具具备一定的学术研究价值。
 
-
-
-
-
-
-
-
-\eat{
-RunDroid以帮助用户（开发人员）了解Android应用程序的执行过程作为基本出发点，让Android应用在执行时输出相应的执行日志信息，进而利用这些日志信息恢复Android应用程序执行时的动态调用图。
-在具体实现上，我们通过对源代码进行日志插桩的方式输出程序在应用层上的执行信息，利用Xposed可以改变Android系统行为的特性进行系统方法的拦截处理，从而记录Android系统内部的执行信息。
-除了展示方法间的调用关系之外，RunDroid考虑到Android系统上的多线程调用场景，提供多线程触发关系展示的功能：RunDroid对日志进行初步处理，在Neo4j图数据库上构建程序调用图，根据具体的多线程调用规则结合Soot提供的实现类查询服务，生成对应的Cypher脚本语句，在对应的节点之间创建对应的触发关系，展现了方法间的多线程触发关系。
-这个方案思路清晰简洁，可以从方法调用、方法间的触发关系、相关对象信息等多个方面较为全面地展现Android应用的执行过程，具有一定的通用性和拓展性。
-}
-
-\eat{
-本文尝试提出一个Android动态函数调用图构建系统，从应用层和系统层对Android应用程序的执行过程进行记录，并利用得到的执行日志信息还原Android应用程序的动态函数调用图，从方法层面还原程序的执行过程。
-另外，通过Android系统的源代码进行分析，我们可以找到Android应用程序中多线程相关的函数触发关系，进一步全面的展现Android应用程序的执行过程。
-另外，开发人员还可以对系统进行拓展，实现自身的需求。
-}
 
 \section{展望}
 
