--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -13,22 +13,20 @@
 \documentclass[12pt,openany,a4paper,fancyhdr,twoside]{ctexbook}
 
 %draft 选项可以使插入的图形只显示外框，以加快预览速度。
-%\documentclass[11pt,a4paper,openany,draft]{book}
 \usepackage{amsmath}
 \usepackage{amssymb}               % AMSLaTeX宏包 用来排出更加漂亮的公式
-%\usepackage[CJKbookmarks]{hyperref}
-\usepackage{url}
-\usepackage[hidelinks]{hyperref}
+
+\usepackage[hyphens]{url}
+\urlstyle{same}
+\usepackage[hidelinks,breaklinks]{hyperref}
+
 \usepackage{shortvrb,indentfirst,ulem,makeidx}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 
 \usepackage{rotating}
 
-
-\usepackage{indentfirst,latexsym,colortbl,subfigure,clrscode}
-
-%\usepackage[ruled,vlined,linesnumbered,]{algorithm2e}
+\usepackage{indentfirst,latexsym,colortbl,clrscode}
 
 \usepackage[linesnumbered,ruled,vlined,resetcount,algochapter]{algorithm2e}%[ruled,vlined]{
 \usepackage{algorithmicx}
@@ -40,19 +38,10 @@
 \renewcommand*{\algorithmcfname}{算法}
 
 \newcommand{\clearPaperPage}{\clearpage}
-%$\renewcommand{\clearPaperPage}{\cleardoublepage}
-
-
-
 
 \SetKwInput{KwIn}{\textbf{输入}}
 \SetKwInput{KwOut}{\textbf{输出}}
 \SetKwInput{KwReturn}{\textbf{return}}
-
-
-\usepackage{bibspacing}
-
-\setlength{\bibitemsep}{2\baselineskip plus .05\baselineskip minus .05\baselineskip}
 
 
 \usepackage{bm}                     % 处理数学公式中的黑斜体的宏包
@@ -74,13 +63,11 @@
 %\usepackage{chngcntr}
 \counterwithout{footnote}{chapter}
 
-
-
 %\usepackage{cite}
 \usepackage{longtable,booktabs}
 \usepackage{multirow}
-\usepackage{subfigure}
-\usepackage[subfigure]{tocloft}
+\usepackage{tocloft}
+\usepackage{subfig}
 
 \usepackage{float}
 \usepackage{balance}
@@ -89,13 +76,12 @@
 \usepackage{pgffor}
 
 \usepackage{threeparttable}
+\usepackage{threeparttablex}
 
 
 %\usepackage{biblatex}
 \makeindex
 \pagestyle{fancy}
-
-\newcommand{\eat}[1]{}
 
 \renewcommand{\headrulewidth}{0.4pt}
 \fancyfoot[CO,CE]{\thepage}
@@ -104,7 +90,6 @@
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
 
 \newtheorem{Def}{定义}
-
 
 \newcommand{\yihao}{\fontsize{26pt}{36pt}\selectfont}           % 一号, 1.4 倍行距
 \newcommand{\erhao}{\fontsize{22pt}{28pt}\selectfont}          % 二号, 1.25 倍行距
@@ -119,100 +104,68 @@
 
 \newcommand{\tablewuhao}{\fontsize{10.5pt}{12.5pt}\selectfont}    % 五号, 单倍行距
 
-\newcommand{\equwuhao}{\fontsize{11.5pt}{15pt}\selectfont}
+\newcommand{\equwuhao}{\fontsize{11pt}{13.5pt}\selectfont}
+
 
 \renewcommand*{\bibfont}{\normalfont\normalsize\linespread{1}\selectfont}
-\setlength{\bibitemsep}{\baselineskip}
-
 
 
 %============================ 可以自定义文字块 ================================%
-
-
 %交叉引用格式
 \renewcommand\figureautorefname{图}
 \renewcommand\tableautorefname{表}
 \renewcommand\equationautorefname{式子}
 \renewcommand{\algorithmautorefname}{算法}
 
-
-
-
-
-\renewcommand{\contentsname}{\hfill\bfseries\Large 目录\hfill}
+\renewcommand{\contentsname}{\hfill\bfseries\Large {目~~~~录}\hfill}
 \renewcommand{\cftaftertoctitle}{\hfill}
 
 \renewcommand{\listtablename}{\hfill\bfseries\Large 表~~~~格\hfill}
 \renewcommand{\listfigurename}{\hfill\bfseries\Large 插~~~~图\hfill}
 
-
 \renewcommand{\listalgorithmcfname}{\centering\bfseries\Large 算~~~~法}
 \newcommand*{\fullref}[1]{\textbf{\hyperref[{#1}]{第\ref*{#1}章~}}}
 
-
 %=============================段前段后定义=============================%
-\def  \cftbeforetitleskip {35pt}
+\def  \cftbeforetitleskip {25pt}
 \def \cftaftertitleskip {25pt}
+
 %% 目录部分
 \setlength{\cftbeforetoctitleskip}{\cftbeforetitleskip}
 \setlength{\cftaftertoctitleskip}{\cftaftertitleskip}
 
 %% 图目录
-
 \setlength{\cftbeforeloftitleskip}{\cftbeforetitleskip}
 \setlength{\cftafterloftitleskip}{\cftaftertitleskip}
 
 %% 表目录
 \setlength{\cftbeforelottitleskip}{\cftbeforetitleskip}
 \setlength{\cftafterlottitleskip}{\cftaftertitleskip}
+
 %% 算法目录
 %\setlength{\cftbeforeloatitleskip}{30pt}
 %\setlength{\cftafterloatitleskip}{20pt}
 
-
-
-
-\CTEXsetup[format={\zihao{3}\heiti\centering}]{chapter}
-\CTEXsetup[format={\raggedright\zihao{4}\heiti}]{section}
-\CTEXsetup[format={\zihao{-4}\heiti}]{subsection}
-
-\CTEXsetup[beforeskip=13pt]{chapter}
-\CTEXsetup[afterskip=16.5 pt]{chapter}
-
-
-
-
-
-\renewcommand{\baselinestretch}{1.5}
-
-\setlength{\baselineskip}{25pt}  %%正文设为25磅行间距
-
-
-%\CTEXsetup[beforeskip=\cftbeforetitleskip]{chapter}
-%\CTEXsetup[afterskip=\cftaftertitleskip]{chapter}
-
-
-
-
+\CTEXsetup[beforeskip=\cftbeforetitleskip]{chapter}
+\CTEXsetup[afterskip=\cftaftertitleskip]{chapter}
 
 %===============================概念定义===============================%
-
-
-
 \newcommand{\citeline}[1]{[\citenum{ #1 }]}
 
-
-
 \newcommand{\important}[1]{\CJKunderdot{\textbf{#1}}}
-
-\newcommand{\TheisName}[0]{面向工业界仿冒应用的大规模实证研究}
-\newcommand{\ecg}{拓展函数调用图} % 袁宇杰的全局变量。最后可删。
-\newcommand{\TheisNameEn}[0]{A Large-Scale Empirical Study on Industrial Fake Apps}
 
 \newcommand{\code}[1]{\textit{ #1 }}
 \newcommand{\codeInEqu}[1]{ {  \textit{\kaishu \textbf{#1 }}}}
 
-%\renewcommand{\code}[1]{{ \lstinline{#1}}}
+\newcommand{\point}[1]{\subsubsection{\textbf{$\S$  #1 }}}
+\newcommand{\Line}[1]{ \textit{ Line .#1}}
+
+% 匿名开关
+% \newcommand{\anonymous}[1]{\phantom{ #1 }}
+
+% 基本信息
+\newcommand{\TheisName}[0]{面向工业界仿冒应用的大规模实证研究}
+\newcommand{\TheisNameEn}[0]{A Large-Scale Empirical Study on Industrial Fake Apps}
 
 \def\yearOfGrduation{2020} % 毕业年份
 \def\monthOfGraduationNum{5} % 毕业月份
@@ -222,8 +175,6 @@
 \def\schoolNameChn{计算机科学与技术学院}
 \def\schoolNameEng{School of Computer Science and Technology}
 
-
-\newcommand{\anonymous}[1]{\phantom{ #1 }} % 匿名开关
 \ifdefined \anonymous
   \def\stuID{***********}
   \def\cmajor{*****}
@@ -248,27 +199,7 @@
   \def\ename{\small{Chongbin~Tang}}
 \fi
 
-\newcommand{\point}[1]{\subsubsection{\textbf{$\S$  #1 }}}
-% \renewcommand{\point}[1]{\noindent{\textbf{$\S$  #1 }}}
-
-
-\newcommand{\Line}[1]{ \textit{ Line .#1}}
-
-\newcommand{\todo}[1]{\textcolor[rgb]{1,0,0}{\textbf{ #1 }}}
-\newcommand{\question}[1]{\textcolor[rgb]{1,0,0}{\textbf{ #1 }?}}
-
-\newcommand{\invoke}[2]{  $ (  #1 \to   #2)  $ }
-\newcommand{\trigger}[2]{  $ (  #1 \hookrightarrow   #2)  $ }
-
-
-\newcommand{\methodObjectRel}[3]{  $ (  #1 \stackrel{#2}{\longrightarrow}   #3)  $ }
-
-\newcommand{\algrule}[1][.2pt]{\par\vskip.5\baselineskip\hrule height #1\par\vskip.5\baselineskip}
-
-
-
-%%% ----------------------------------------------------------------------
-
+% 基本信息 ends
 
 
 %============================= 版芯控制 ================================%
@@ -276,8 +207,6 @@
 \setlength{\evensidemargin}{\oddsidemargin}
 \voffset-6mm \textwidth=150mm \textheight=230mm \headwidth=150mm
 %\rightmargin=35mm
-%                                                                       %
-
 
 %============================= 页面设置 ================================%
 %-------------------- 定义页眉和页脚 使用fancyhdr 宏包 -----------------%
@@ -301,29 +230,40 @@
 \dottedcontents{section}[1.5cm]{\xiaosi\heiti}{2.8em}{9.5pt}
 \lhead{\articleCategory}
 
-% \setlength{\parindent}{2em}
-% %默认的弹性间距会导致文中某些排版flush的时候，出现大量空白。
-% \setlength{\parskip}{0.5em} %指定固定段后间距，默认为弹性间距。
-% \setlength{\intextsep}{10pt} %固定浮浮动体前后间距。
-
 %=============================== 代码格式定义 ================================%
 
 
 %% 辅助功能显示页边界
-% \usepackage{showframe} % just for the example
+%\usepackage{showframe} % just for the example
 
 \usepackage{etoolbox}
-
-
-
 \input{settings-lst}
 
+\makeatletter
+\DeclareRobustCommand\citenum
+{\begingroup
+	%      \NAT@swatrue\let\NAT@ctype\z@\NAT@parfalse\let\textsuperscript\NAT@spacechar% DELETED
+	\NAT@swatrue\let\NAT@ctype\z@\NAT@parfalse\let\textsuperscript\relax% NEW
+	\NAT@citexnum[][]}
+\makeatother
 
+\usepackage{bibspacing}
+\setlength{\bibitemsep}{\baselineskip}
+\renewcommand{\bibfont}{\normalfont}
 
+\usepackage{lipsum}
+% ADD THE FOLLOWING COUPLE LINES INTO YOUR PREAMBLE
+\let\OLDthebibliography\thebibliography
+\renewcommand\thebibliography[1]{
+	\OLDthebibliography{#1}
+	\setlength{\parskip}{0pt}
+	\setlength{\itemsep}{0pt plus 0.3ex}
+}
 
 %=============================== 正文部分 ================================%
 
 \begin{document}
+
 \input{A1-COVER-1.tex}
 \clearPaperPage
 
@@ -345,9 +285,6 @@
 \input{B2-ABSTRACT-E.tex}
 \clearPaperPage
 
-%\clearpage{\pagestyle{plain}\clearPaperPage}
-%\textcolor[rgb]{1,1,1}{文本}
-
 \input{B2-TOC.tex}
 \clearPaperPage
 
@@ -355,28 +292,30 @@
 \clearPaperPage
 
 \input{B4-Table.tex}
+% \input{B5-Algorithms.tex}
 \clearPaperPage
-%\input{B5-Algorithms.tex}
-%\clearPaperPage
 
 \pagenumbering{arabic}
 \pagestyle{fancy}
-\fancyhead[LE,RO]{\small{\articleCategory}}
-\fancyhead[RE,LO]{ \small\leftmark}
+\fancyhead[LE,RO]{\articleCategory}
+\fancyhead[RE,LO]{ \leftmark}
 
-% 正文
+\CTEXsetup[format+={\zihao{3}\heiti}]{chapter}
+\CTEXsetup[format+={\raggedright\zihao{4}\heiti}]{section}
+\CTEXsetup[format+={\zihao{-4}\heiti}]{subsection}
+
+\setlength{\baselineskip}{25pt}  %%正文设为25磅行间距
+\renewcommand{\addvspace}[1]{\origaddvspace{#1}} % 奇怪的section行间距。要放在这个位置
 % 在章首页添加页眉
 
 \fancypagestyle{plain}{%
-\fancyhead[LE,RO]{\small{\articleCategory}}
-\fancyhead[RE,LO]{ \small\leftmark}
+\fancyhead[LE,RO]{\articleCategory}
+\fancyhead[RE,LO]{ \leftmark}
 }
 
-% \banxiaosi
+\raggedbottom
 \xiaosi
-
 \clearPaperPage
-
 
 \input{chapter-intro.tex}
 \clearPaperPage
@@ -405,7 +344,7 @@
 \bibliography{bib/REFERENCE}
 \clearPaperPage
 
-% 致谢
+% 致谢。匿名时不编译
 \ifx\anonymous\undefined
 	\fancypagestyle{plain}{%
 		\fancyhead[LE,RO]{\small{\articleCategory}}
@@ -415,7 +354,6 @@
 	\clearPaperPage
 \fi
 
-% 攻读学位期间发表过的论文
 \input{D3-MYACHIEVEMENTS.tex}
 
 \end{document}
