--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -1,9 +1,9 @@
 \newpage
 
 \addcontentsline{toc}{chapter}{ABSTRACT}
-\vspace{-500pt}
 
 \chapter*{\zihao{2}\heiti{ABSTRACT}}
+\vspace{-5mm}
 
 % 作为市场占有率最高的智能手机操作系统，安卓系统吸引了无数开发者为其开发应用，也使各种各样与安卓应用及其研发相关的研究得以开展。
 % 然而，在浩如烟海的安卓应用研究中，针对仿冒应用的研究仍相当有限。
@@ -14,12 +14,10 @@ While there have been various studies towards Android apps and their development
 Fake apps and their development are distinct from official apps and belong to the mobile underground industry.
 Due to the lack of knowledge of the mobile underground industry, fake apps, their ecosystem and nature still remain in mystery.
 
-
 % 为了填补这一部分的空白，我们从现实的安卓应用市场中爬取了大量真实数据，对一批从工业界中找到的仿冒应用进行了已知的首个系统、全面的大规模实证研究。
 % 由于仿冒应用的模仿对象往往是较为热门的应用，我们按照排行榜确定了全网最受欢迎的前50个应用，然后使用网络爬虫搜集了与这批热门应用相关的超过150,000个应用样本作为研究对象，以进行全面的研究。
 To fill the blank, we conduct the first systematic and comprehensive empirical study on a large-scale set of fake apps.
 Over 150,000 samples related to the top 50 popular apps are collected for extensive measurement.
-
 
 % 本文呈现了我们对这批样本从三个不同视角进行探究的结果。
 % 三个视角由浅入深，从仿冒应用的基本信息特征开始，再将仿冒应用数据与其来源的应用市场结合，最后引入时间因素对数据进行挖掘分析。
@@ -34,10 +32,8 @@ As a result, the three perspectives provide us with valuable domain knowledge, l
 Moreover, we provide a number of thought-provoking case studies, confirming the findings mentioned above.
 Last and not least, we collect, analyze and verify a series of fake apps' feedback from the market, making our study more complete.
 
-
 % 我们希望本文可以为读者提供一个面向仿冒应用及其生态的清晰视角，并借此抛砖引玉，吸引更多科研人员投入到对安卓灰色产业的观察研究中。
 We hope this paper can provide the readers with a clear vision of fake apps and their ecosystem, and thus raising more researchers' interest in observing and studying the Android underground industry.
-
 
 % \sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析}
 {\sihao{\textbf{\newline Keywords:}}} \textit{Android application, Fake App, Empirical Study, Data Analysis}
