--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -1,30 +1,25 @@
 \addcontentsline{toc}{chapter}{摘要}
 
 \chapter*{\zihao{2}\heiti{摘~~~~要}}
+\vspace{-5mm}
 
-
-\setlength{\baselineskip}{25pt}	
-
-
+\setlength{\baselineskip}{25pt} % 25磅行距
 
 作为市场占有率最高的智能手机操作系统，安卓系统吸引了无数开发者为其开发应用，也使各种各样与安卓应用及其研发相关的研究得以开展。
 然而，在浩如烟海的安卓应用研究中，针对仿冒应用的研究仍相当有限。
 有别于官方发布的正版应用，仿冒应用属于移动灰色产业的一环，其目的各异，难以一概而论，其行为特征更是不得而知。
 由于我们对移动灰色产业知之甚少，仿冒应用的产业链及其生态对我们仍是一个谜。
 
-
 为了填补这一部分的空白，我们从现实的安卓应用市场中爬取了大量真实数据，对一批从工业界中找到的仿冒应用进行了已知的首个系统、全面的大规模实证研究。
-由于仿冒应用的模仿对象往往是较为热门的应用，我们按照排行榜确定了全网最受欢迎的前50个应用，然后使用网络爬虫搜集了与这批热门应用相关的超过150,000个应用样本作为研究对象，以进行全面的研究。
-
+由于仿冒应用的模仿对象往往是较为热门的应用，我们按照知名数据分析机构公布的排行榜确定了全网最受欢迎的前50款应用，然后使用网络爬虫搜集了与这批热门应用相关的超过150,000个应用样本作为研究对象并收录进数据库，以进行全面的研究。
 
 本文呈现了我们对这批样本从三个不同视角进行探究的结果，其分别为：仿冒应用的基本特征，针对仿冒样本的量化分析，及仿冒应用的发展轨迹。
-三个视角由浅入深，从仿冒应用的基本信息特征开始，再将仿冒应用数据与其来源的应用市场结合，最后引入时间因素对数据进行挖掘分析。
+三个视角由浅入深，从仿冒应用的应用名、包名和APK包大小等基本信息特征开始测量，再将仿冒应用数据与其来源的应用市场结合分析，最后引入时间因素对数据进行挖掘。
 从三个不同视角的分析中，本文提供了包括仿冒应用命名倾向、仿冒应用作者对应用市场拦截的规避策略等珍贵的领域知识。
 本文还对数据中较为特别的样本作出了详尽的案例分析，除了可以印证上述的领域知识与发现之外，也能引起我们对现今应用市场生态环境的思考。
-最后，最后针对仿冒应用在应用市场上获得的评级、评论等用户反馈进行了一系列的分析与验证。
 
+最后，我们又针对仿冒应用在应用市场上获得的评级、评论等用户反馈进行了一系列的分析与验证。
 
 我们希望本文可以为读者提供一个面向仿冒应用及其生态的清晰视角，并借此抛砖引玉，吸引更多科研人员投入到对安卓灰色产业的观察研究中。
-
 
 \sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析}
