--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -123,9 +123,9 @@
 
 \renewcommand{\listalgorithmcfname}{\centering\bfseries\Large 算~~~~法}
 % 章引用
-\newcommand*{\fullref}[1]{\textbf{\hyperref[{#1}]{第\ref*{#1}章~}}}
+\newcommand*{\fullref}[1]{\textbf{\hyperref[{#1}]{第\ref*{#1}章}}}
 % 节引用
-\newcommand*{\secref}[1]{\textbf{\hyperref[{#1}]{第\ref*{#1}节~}}}
+\newcommand*{\secref}[1]{\textbf{\hyperref[{#1}]{第\ref*{#1}节}}}
 % 概念定义
 \newtheorem{Def}{定义}
 
