--- a/edwin_2019/chapter-background.tex
+++ b/edwin_2019/chapter-background.tex
@@ -70,6 +70,7 @@ APK文件的本质是压缩文件，其中包含了被编译的代码文件、Ap
 
 
 \section{Android应用市场}
+\label{sec:androidMkt}
 由于每个人都可以开发、构建自己的Android App，从网上发布的App数不胜数。这种开放性为Android应用生态带来开放性的同时，也会引入以下几个问题：
 
 1)\ \emph{难以择优} \quad
@@ -91,7 +92,7 @@ Google发布的应用商店Google Play~\cite{GooglePlay}的存在缓解了以上
 一方面，普通用户可以经由Android系统中预装好的Google Play服务寻找、购买和下载心仪的App；另一方面，Google Play也允许开发者将App通过开发者账户上传到Google Play中，在经过一系列的审查之后上架到商场上供用户下载。与上述的五个问题对应，Google Play应用商店提供了以下几点服务：
 
 1)\ \emph{一个由官方背书的下载渠道} \quad
-这确保了用户下载的App得到官方认可。同时，Google Play也提供了一个关于App的社区条件，用户可以对App进行打分、评论，用户对App的评价经审核后可以由所有其他用户查看，直接影响其他用户对``是否要下载某款应用''的决定；
+这确保了用户下载的App得到官方认可。同时，Google Play也提供了一个关于App的社区环境，用户可以对App进行打分、评论，用户对App的评价经审核后可以由所有其他用户查看，直接影响其他用户对``是否要下载某款应用''的决定；
 
 2)\ \emph{上架之前的应用审核} \quad
 在开发者上传App时对App作出一定的审查，以排除部分恶意开发者在商场中上架病毒和恶意应用的可能性。Google Play也会根据用户反馈、应用本身运营数据等原因于每季度从商店中移除一部分App，以保证商店货架上App的质量；
