--- a/edwin_2019/chapter-dataCollection.tex
+++ b/edwin_2019/chapter-dataCollection.tex
@@ -32,7 +32,7 @@
 % We also aim to unveil the developing trend of fake authors to help fake app detection and shine light on the nature of the fake apps' ecosystem for both academia and industry.
 我们也试图从收集到的信息中挖掘出仿冒应用作者的开发轨迹，以求为学术界和工业界揭示仿冒应用生态系统的更多信息。
 
-在此之外，我们还随机选取了收集到的一部分仿冒应用，从其对应的第三方应用市场中提取用户对他们的评价，以期了解用户对这些应用持有的态度或是寻找更多有价值的信息。
+在此之外，我们还从几个第三方应用市场中随机选取一部分应用，提取了用户对它们的所有历史评价，然后筛选出其中对仿冒应用的评价并分析，以期了解用户对这些应用持有的态度或是寻找更多有价值的信息。
 
 % \section{Data Collection}
 \section{数据收集}
