--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -1,849 +1,100 @@
-@phdthesis{stafford2000formal,
-	title={A formal, language-independent, and compositional approach to interprocedural control dependence analysis},
-	author={Stafford, Judith Alyce and Wolf, Alexander L},
-	year={2000},
-	school={University of Colorado}
+% ranking frauds related content starts from here
+
+@INPROCEEDINGS{hernandez2019the,
+	author = {Hernandez, Nestor and Rahman, Mizanur and Recabarren, Ruben and Ahmed, Ishtiaque and Carbunar, Bogdan},
+	title = {The Art and Craft of Fraudulent App Promotion in Google Play},
+	booktitle = {Proceedings of the 26th ACM Conference on Computer and Communications Security (CCS 2019)},
+	organization={ACM},
+	year = {2019}
 }
 
-@inproceedings{collard2013srcml,
-	title={srcML: An Infrastructure for the Exploration, Analysis, and Manipulation of Source Code},
-	author={Collard, ML and Decker, M and Maletic, JI},
-	booktitle={Proceedings of 29th IEEE International Conference on Software Maintenance (ICSM’13) Tool Demonstration Track, Eindhoven, The Netherlands},
-	pages={1--4},
-	year={2013}
-}
-@article{sun2016monitoring,
-	title={A monitoring method of sensitive calls based on the Android platform software behavior},
-	author={Sun, Cheng and Qin, Sujuan},
-	year={2016}
-}
-@article{arzt2014flowdroid,
-	title={Flowdroid: Precise context, flow, field, object-sensitive and lifecycle-aware taint analysis for android apps},
-	author={Arzt, Steven and Rasthofer, Siegfried and Fritz, Christian and Bodden, Eric and Bartel, Alexandre and Klein, Jacques and Le Traon, Yves and Octeau, Damien and McDaniel, Patrick},
-	journal={Acm Silan Notices},
-	volume={49},
-	number={6},
-	pages={259--269},
-	year={2014},
-	publisher={ACM}
-}
-@inproceedings{kim2011crash,
-	title={Crash graphs: An aggregated view of multiple crashes to improve crash triage},
-	author={Kim, Sunghun and Zimmermann, Thomas and Nagappan, Nachiappan},
-	booktitle={Dependable Systems \& Networks (DSN), 2011 IEEE/IFIP 41st International Conference on},
-	pages={486--493},
-	year={2011},
-	organization={IEEE}
-}
-@inproceedings{jones2005empirical,
-	title={Empirical evaluation of the tarantula automatic fault-localization technique},
-	author={Jones, James A and Harrold, Mary Jean},
-	booktitle={Proceedings of the 20th IEEE/ACM international Conference on Automated software engineering},
-	pages={273--282},
-	year={2005},
-	organization={ACM}
-}
-@inproceedings{yang2015static,
-	title={Static control-flow analysis of user-driven callbacks in Android applications},
-	author={Yang, Shengqian and Yan, Dacong and Wu, Haowei and Wang, Yan and Rountev, Atanas},
-	booktitle={Software Engineering (ICSE), 2015 IEEE/ACM 37th IEEE International Conference on},
-	volume={1},
-	pages={89--99},
-	year={2015},
-	organization={IEEE}
-}
-@article{chun2014taintdroid,
-	title={TaintDroid: an information-flow tracking system for realtime privacy monitoring on smartphones},
-	author={Chun, S Han V Tendulkar BG and McDaniel, LP Cox J Jung P and Enck, AN Sheth W and Gilbert, P},
-	journal={ACM Transactions on Computer Systems (TOCS)},
-	year={2014}
-}
-@inproceedings{baah2010causal,
-	title={Causal inference for statistical fault localization},
-	author={Baah, George K and Podgurski, Andy and Harrold, Mary Jean},
-	booktitle={Proceedings of the 19th international symposium on Software testing and analysis},
-	pages={73--84},
-	year={2010},
-	organization={ACM}
-}
-@inproceedings{vallee1999soot,
-	title={Soot-a Java bytecode optimization framework},
-	author={Vall{\'e}e-Rai, Raja and Co, Phong and Gagnon, Etienne and Hendren, Laurie and Lam, Patrick and Sundaresan, Vijay},
-	booktitle={Proceedings of the 1999 conference of the Centre for Advanced Studies on Collaborative research},
-	pages={13},
-	year={1999},
-	organization={IBM Press}
-}
-@online{Configur27,
-	title = {Configure Apps with Over 64K Methods | Android Studio},
-	url={https://developer.android.com/studio/build/multidex.html},
-	year={2017},
-	lastaccessed = {May 15,2017}
+@inproceedings{rahman2019art,
+  title={The Art and Craft of Fraudulent App Promotion in Google Play},
+  author={Rahman, Mizanur and Hernandez, Nestor and Recabarren, Ruben and Ahmed, Syed Ishtiaque and Carbunar, Bogdan},
+  booktitle={Proceedings of the 2019 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={2437--2454},
+  year={2019}
 }
 
-@online{Applicat55,
-	title = {Application Fundamentals | Android Developers},
-	url={https://developer.android.com/guide/components/fundamentals.html#Components},
-	year = {2017},
-	lastaccessed = {May 24,2017}
-}
-@online{Neo4jthe19,
-	title = {Neo4j, the world's leading graph database - Neo4j Graph Database},
-	url={https://neo4j.com/},
-	year = {2017},
-	lastaccessed = {May 24,2017}
+@inproceedings{xie2016you,
+  title={You can promote, but you can't hide: large-scale abused app detection in mobile app stores},
+  author={Xie, Zhen and Zhu, Sencun and Li, Qing and Wang, Wenjing},
+  booktitle={Proceedings of the 32nd Annual Conference on Computer Security Applications},
+  pages={374--385},
+  year={2016},
+  organization={ACM}
 }
 
-@online{GoogleP55:online,
-	title = {Google Play Store: number of apps 2018 | Statistic},
-	url ={https://www.statista.com/statistics/266210/number-of-available-applications-in-the-google-play-store/},
-	year={2018},
-	lastaccessed = {September 07,2018}
-}
-@online{Xposed,
-	title = {Xposed Installer | Xposed Module Repository},
-	url={http://repo.xposed.info/module/de.robv.android.xposed.installer},
-	year={2017},
-	lastaccessed = {May 15,2017}
-}
-@online{Analyzin35,
-	title = {Analyzing UI Performance with Systrace | Android Studio},
-	url={https://developer.android.com/studio/profile/systrace.html},
-	year={2017},
-	lastaccessed = {May 15,2017}
-}
-@inproceedings{baah2011mitigating,
-	author = {Baah, George K. and Podgurski, Andy and Harrold, Mary Jean},
-	title = {Mitigating the Confounding Effects of Program Dependences for Effective Fault Localization},
-	booktitle = {Proceedings of the 19th ACM SIGSOFT Symposium and the 13th European Conference on Foundations of Software Engineering},
-	series = {ESEC/FSE '11},
-	year = {2011}
-}
-@inproceedings{AmanDroid,
-	author = {Wei, Fengguo and Roy, Sankardas and Ou, Xinming and Robby},
-	title = {Amandroid: A Precise and General Inter-component Data Flow Analysis Framework for Security Vetting of Android Apps},
-	booktitle = {Proceedings of the 2014 ACM SIGSAC Conference on Computer and Communications Security},
-	series = {CCS '14},
-	year = {2014}
-}
-@inproceedings{iccta,
-	author = {Li, Li and Bartel, Alexandre and Bissyand{\'e}, Tegawend{\'e} F. and Klein, Jacques and Le Traon, Yves and Arzt, Steven and Rasthofer, Siegfried and Bodden, Eric and Octeau, Damien and McDaniel, Patrick},
-	title = {IccTA: Detecting Inter-component Privacy Leaks in Android Apps},
-	booktitle = {Proceedings of the 37th International Conference on Software Engineering - Volume 1},
-	series = {ICSE '15},
-	year = {2015}
-}
-@online{AspectJ,
-	title = {The AspectJ Project},
-	url={https://eclipse.org/aspectj/},
-	year={2017},
-	lastaccessed = {May 15,2017}
-}
-@online{EMMASDKi26,
-	title = {EMMA SDK integration for Android  EMMA Support},
-	url={http://support.emma.io/hc/en-us/sections/201193992-EMMA-SDK-integration-for-Android},
-	year={2017},
-	lastaccessed = {May 15,2017}
-}
-@inproceedings{mirzaei2015exception,
-	title={Exception fault localization in Android applications},
-	author={Mirzaei, Hamed and Heydarnoori, Abbas},
-	booktitle={Mobile Software Engineering and Systems (MOBILESoft), 2015 2nd ACM International Conference on},
-	pages={156--157},
-	year={2015},
-	organization={IEEE}
-}
-@inproceedings{machado2013mzoltar,
-	title={MZoltar: automatic debugging of Android applications},
-	author={Machado, Pedro and Campos, Jos{\'e} and Abreu, Rui},
-	booktitle={Proceedings of the 2013 International Workshop on Software Development Lifecycle for Mobile},
-	pages={9--16},
-	year={2013},
-	organization={ACM}
-}
-@article{gong2015state,
-	title={State dependency probabilistic model for fault localization},
-	author={Gong, Dandan and Su, Xiaohong and Wang, Tiantian and Ma, Peijun and Yu, Wang},
-	journal={Information and Software Technology},
-	volume={57},
-	pages={430--445},
-	year={2015},
-	publisher={Elsevier}
-}
-@article{MutationOperatorsAndroid,
-	author = {Deng, Lin and Offutt, Jeff and Ammann, Paul and Mirzaei, Nariman},
-	title = {Mutation Operators for Testing Android Apps},
-	journal = {Inf. Softw. Technol.},
-	issue_date = {January 2017},
-	volume = {81},
-	number = {C},
-	month = jan,
-	year = {2017},
-	issn = {0950-5849},
-	pages = {154--168},
-	numpages = {15},
-	url = {https://doi.org/10.1016/j.infsof.2016.04.012},
-	doi = {10.1016/j.infsof.2016.04.012},
-	acmid = {3030390},
-	publisher = {Butterworth-Heinemann},
-	address = {Newton, MA, USA},
-	keywords = {Android, Mutation testing, Software testing},
+@inproceedings{chen2017toward,
+  title={Toward detecting collusive ranking manipulation attackers in mobile app markets},
+  author={Chen, Hao and He, Daojing and Zhu, Sencun and Yang, Jingshun},
+  booktitle={Proceedings of the 2017 ACM on Asia Conference on Computer and Communications Security},
+  pages={58--70},
+  year={2017},
+  organization={ACM}
 }
 
-@inproceedings{deng2015towards,
-	title={Towards mutation analysis of android apps},
-	author={Deng, Lin and Mirzaei, Nariman and Ammann, Paul and Offutt, Jeff},
-	booktitle={Software Testing, Verification and Validation Workshops (ICSTW), 2015 IEEE Eighth International Conference on},
-	pages={1--10},
-	year={2015},
-	organization={IEEE}
+@inproceedings{hu2019want,
+  title={Want to earn a few extra bucks? a first look at money-making apps},
+  author={Hu, Yangyu and Wang, Haoyu and Li, Li and Guo, Yao and Xu, Guoai and He, Ren},
+  booktitle={2019 IEEE 26th International Conference on Software Analysis, Evolution and Reengineering (SANER)},
+  pages={332--343},
+  year={2019},
+  organization={IEEE}
 }
 
-@inproceedings{linares2017enabling,
-	title={Enabling mutation testing for android apps},
-	author={Linares-V{\'a}squez, Mario and Bavota, Gabriele and Tufano, Michele and Moran, Kevin and Di Penta, Massimiliano and Vendome, Christopher and Bernal-C{\'a}rdenas, Carlos and Poshyvanyk, Denys},
-	booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
-	pages={233--244},
-	year={2017},
-	organization={ACM}
+@article{zhu2014discovery,
+  title={Discovery of ranking fraud for mobile apps},
+  author={Zhu, Hengshu and Xiong, Hui and Ge, Yong and Chen, Enhong},
+  journal={IEEE Transactions on knowledge and data engineering},
+  volume={27},
+  number={1},
+  pages={74--87},
+  year={2014},
+  publisher={IEEE}
 }
 
-@online{Simpleperf,
-	title={Simpleperf},
-	url={https://android.googlesource.com/platform/system/extras/master/simpleperf/doc/README.md},
-	year = {2018},
-	lastaccessed = {July 28,2018}
+@inproceedings{xie2014grouptie,
+  title={Grouptie: toward hidden collusion group discovery in app stores},
+  author={Xie, Zhen and Zhu, Sencun},
+  booktitle={Proceedings of the 2014 ACM conference on Security and privacy in wireless \& mobile networks},
+  pages={153--164},
+  year={2014},
+  organization={ACM}
 }
 
-@online{Nanoscope,
-	title={Nanoscope},
-	url={https://github.com/uber/nanoscope/wiki/Motivation},
-	year = {2018},
-	lastaccessed = {July 28,2018}
+@inproceedings{hooi2016fraudar,
+  title={Fraudar: Bounding graph fraud in the face of camouflage},
+  author={Hooi, Bryan and Song, Hyun Ah and Beutel, Alex and Shah, Neil and Shin, Kijung and Faloutsos, Christos},
+  booktitle={Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={895--904},
+  year={2016}
 }
 
-@online{AndroidProfiler,
-	title={AndroidProfiler},
-	url={https://developer.android.com/studio/profile/cpu-profiler},
-	year = {2018},
-	lastaccessed = {Aug 11,2018}
+@inproceedings{abbasi2013measuring,
+  title={Measuring user credibility in social media},
+  author={Abbasi, Mohammad-Ali and Liu, Huan},
+  booktitle={International Conference on Social Computing, Behavioral-Cultural Modeling, and Prediction},
+  pages={441--448},
+  year={2013},
+  organization={Springer}
 }
 
-@inproceedings{linares2017enabling,
-	title={Enabling mutation testing for android apps},
-	author={Linares-V{\'a}squez, Mario and Bavota, Gabriele and Tufano, Michele and Moran, Kevin and Di Penta, Massimiliano and Vendome, Christopher and Bernal-C{\'a}rdenas, Carlos and Poshyvanyk, Denys},
-	booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
-	pages={233--244},
-	year={2017},
-	organization={ACM}
-}
-@article{Lin2015Towards,
-	title={Towards mutation analysis of Android apps},
-	author={Lin, Deng and Mirzaei, Nariman and Ammann, Paul and Offutt, Jeff},
-	journal={IEEE},
-	pages={1-10},
-	year={2015},
-}
-@inproceedings{ma2006mujava,
-	title={MuJava: a mutation system for Java},
-	author={Ma, Yu-Seung and Offutt, Jeff and Kwon, Yong-Rae},
-	booktitle={Proceedings of the 28th international conference on Software engineering},
-	pages={827--830},
-	year={2006},
-	organization={ACM}
-}
-@inproceedings{Arzt2017StubDroid,
-	title={StubDroid: Automatic Inference of Precise Data-Flow Summaries for the Android Framework},
-	author={Arzt, Steven and Bodden, Eric},
-	booktitle={Ieee/acm  International Conference on Software Engineering},
-	pages={725-735},
-	year={2017},
-}
-@article{Moran2018MDroid,
-	title={MDroid+: A Mutation Testing Framework for Android},
-	author={Moran, Kevin and Tufano, Michele and Bernalcárdenas, Carlos and Linaresvásquez, Mario and Bavota, Gabriele and Vendome, Christopher and Penta, Massimiliano Di and Poshyvanyk, Denys},
-	year={2018},
-}
-@inproceedings{Jabbarvand2017,
-	title={$\mu$Droid: an energy-aware mutation testing framework for Android},
-	author={Jabbarvand, Reyhaneh and Malek, Sam},
-	booktitle={Joint Meeting},
-	pages={208-219},
-	year={2017},
-}
-@article{Jia2010An,
-	title={An Analysis and Survey of the Development of Mutation Testing},
-	author={Jia, Yue and Harman, Mark},
-	journal={IEEE Transactions on Software Engineering},
-	volume={37},
-	number={5},
-	pages={649-678},
-	year={2010},
-}
-@inproceedings{Mahmood2014EvoDroid,
-	title={EvoDroid: segmented evolutionary testing of Android apps},
-	author={Mahmood, Riyadh and Mirzaei, Nariman and Malek, Sam},
-	booktitle={The  ACM Sigsoft International Symposium},
-	pages={599-609},
-	year={2014},
-}
-@inproceedings{Loise2017Towards,
-	title={Towards Security-Aware Mutation Testing},
-	author={Loise, Thomas and Devroey, Xavier and Perrouin, Gilles and Papadakis, Mike and Heymans, Patrick},
-	booktitle={IEEE International Conference on Software Testing, Verification and Validation Workshops},
-	pages={97-102},
-	year={2017},
-}
-@online{hoffmann2011eclemma,
-	title={Eclemma-jacoco java code coverage library},
-	author={Hoffmann, Marc R and Janiczak, B and Mandrikov, E},
-	year={2011}
-
-}
-@article{wong2016survey,
-	title={A survey on software fault localization},
-	author={Wong, W Eric and Gao, Ruizhi and Li, Yihao and Abreu, Rui and Wotawa, Franz},
-	journal={IEEE Transactions on Software Engineering},
-	volume={42},
-	number={8},
-	pages={707--740},
-	year={2016},
-	publisher={IEEE}
-}
-@article{wong2009survey,
-	title={A survey of software fault localization},
-	author={Wong, W Eric and Debroy, Vidroha},
-	journal={Department of Computer Science, University of Texas at Dallas, Tech. Rep. UTDCS-45},
-	volume={9},
-	year={2009}
-}
-@inproceedings{Jones:2002:VTI:581339.581397,
-	author = {Jones, James A. and Harrold, Mary Jean and Stasko, John},
-	title = {Visualization of Test Information to Assist Fault Localization},
-	booktitle = {Proceedings of the 24th International Conference on Software Engineering},
-	series = {ICSE '02},
-	year = {2002},
-	isbn = {1-58113-472-X},
-	location = {Orlando, Florida},
-	pages = {467--477},
-	numpages = {11},
-	url = {http://doi.acm.org/10.1145/581339.581397},
-	doi = {10.1145/581339.581397},
-	acmid = {581397},
-	publisher = {ACM},
-	address = {New York, NY, USA},
-}
-@article{abreu2009practical,
-	title={A practical evaluation of spectrum-based fault localization},
-	author={Abreu, Rui and Zoeteweij, Peter and Golsteijn, Rob and Van Gemund, Arjan JC},
-	journal={Journal of Systems and Software},
-	volume={82},
-	number={11},
-	pages={1780--1792},
-	year={2009},
-	publisher={Elsevier}
-}
-@online{FDroidFr21:online,
-	author = {},
-	title = {F-Droid - Free and Open Source Android App Repository},
-	url={https://f-droid.org/},
-	month = {},
-	year = {2018},
-	note = {(Accessed on 08/08/2018)}
-}
-@online{Measurea65:online,
-	author = {},
-	title = {Measure app performance with Android Profiler  |  Android Developers},
-	url={https://developer.android.com/studio/profile/android-profiler},
-	month = {},
-	year = {},
-	note = {(Accessed on 08/10/2018)}
-}
-@inproceedings{au2012pscout,
-	title={Pscout: analyzing the android permission specification},
-	author={Au, Kathy Wain Yee and Zhou, Yi Fan and Huang, Zhen and Lie, David},
-	booktitle={Proceedings of the 2012 ACM conference on Computer and communications security},
-	pages={217--228},
-	year={2012},
-	organization={ACM}
+% comment understanding
+@inproceedings{fu2013people,
+  title={Why people hate your app: Making sense of user feedback in a mobile app store},
+  author={Fu, Bin and Lin, Jialiu and Li, Lei and Faloutsos, Christos and Hong, Jason and Sadeh, Norman},
+  booktitle={Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1276--1284},
+  year={2013}
 }
 
-@inproceedings{pandita2013whyper,
-	title={WHYPER: Towards Automating Risk Assessment of Mobile Applications.},
-	author={Pandita, Rahul and Xiao, Xusheng and Yang, Wei and Enck, William and Xie, Tao},
-	booktitle={USENIX Security Symposium},
-	volume={2013},
-	year={2013}
-}
-
-@inproceedings{su2016fsmdroid,
-	title={FSMdroid: guided GUI testing of android apps},
-	author={Su, Ting},
-	booktitle={Software Engineering Companion (ICSE-C), IEEE/ACM International Conference on},
-	pages={689--691},
-	year={2016},
-	organization={IEEE}
-}
-
-@inproceedings{androidtest2,
-	author = {Su, Ting and Meng, Guozhu and Chen, Yuting and Wu, Ke and Yang, Weiming and Yao, Yao and Pu, Geguang and Liu, Yang and Su, Zhendong},
-	title = {Guided, Stochastic Model-based GUI Testing of Android Apps},
-	booktitle = {Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
-	series = {ESEC/FSE 2017},
-	year = {2017},
-	pages = {245--256}
-}
-
-@inproceedings{stackmine,
-	author = {Han, Shi and Dang, Yingnong and Ge, Song and Zhang, Dongmei and Xie, Tao},
-	title = {Performance debugging in the large via mining millions of stack traces},
-	booktitle = {Proc. ICSE},
-	year = {2012},
-	pages = {145--155},
-}
-
-@inproceedings{toddler,
-	author = {Nistor, Adrian and Song, Linhai and Marinov, Darko and Lu, Shan},
-	title = {Toddler: detecting performance problems via similar memory-access patterns},
-	booktitle = {Proc. ICSE},
-	year = {2013},
-	pages = {562--571},
-}
-
-@inproceedings{testseq,
-	author    = {Valentin Dallmeier and
-	Christian Lindig and
-	Andreas Zeller},
-	title     = {Lightweight Defect Localization for Java},
-	booktitle = {{ECOOP} 2005 - Object-Oriented Programming, 19th European Conference,
-	Glasgow, UK, July 25-29, 2005, Proceedings},
-	pages     = {528--550},
-	year      = {2005},
-}
-
-@inproceedings{androidperf,
-	author = {Liu, Yepang and Xu, Chang and Cheung, Shing-Chi},
-	title = {Characterizing and Detecting Performance Bugs for Smartphone Applications},
-	booktitle = {Proceedings of the 36th International Conference on Software Engineering},
-	series = {ICSE 2014},
-	year = {2014},
-	isbn = {978-1-4503-2756-5},
-	location = {Hyderabad, India},
-	pages = {1013--1024},
-	numpages = {12},
-}
-
-@inproceedings{complexityAnalysis,
-	author = {Simon F. Goldsmith and Alex S. Aiken and Daniel Shawcross Wilkerson},
-	title = {Measuring empirical computational complexity},
-	booktitle = {Proc. ESEC/FSE},
-	year = {2007},
-	pages = {395--404},
-}
-
-@inproceedings{gprof,
-	author = {Graham, Susan L. and Kessler, Peter B. and Mckusick, Marshall K.},
-	title = {Gprof: A call graph execution profiler},
-	booktitle = {Proc. PLDI},
-	year = {1982},
-	isbn = {0-89791-074-5},
-	pages = {120--126},
-	numpages = {7}
-}
-
-@inproceedings{dynamiccallgraph,
-	author    = {Byeongcheol Lee and
-	Kevin Resnick and
-	Michael D. Bond and
-	Kathryn S. McKinley},
-	title     = {Correcting the Dynamic Call Graph Using Control-Flow Constraints},
-	booktitle = {Compiler Construction (CC)},
-	pages     = {80--95},
-	year      = {2007},
-
-}
-
-@inproceedings{dallmeier2005lightweight,
-	title={Lightweight defect localization for java},
-	author={Dallmeier, Valentin and Lindig, Christian and Zeller, Andreas},
-	booktitle={European conference on object-oriented programming},
-	pages={528--550},
-	year={2005},
-	organization={Springer}
-}
-@inproceedings{Steimann2013Threats,
-	title={Threats to the validity and value of empirical assessments of the accuracy of coverage-based fault locators},
-	author={Steimann, Friedrich and Frenkel, Marcus and Rui, Abreu},
-	booktitle={International Symposium on Software Testing and Analysis},
-	pages={314-324},
-	year={2013},
-}
-@inproceedings{fan2018efficiently,
-	author = {Fan, Lingling and Su, Ting and Chen, Sen and Meng, Guozhu and Liu, Yang and Xu, Lihua and Pu, Geguang},
-	title = {Efficiently Manifesting Asynchronous Programming Errors in Android Apps},
-	booktitle = {Proceedings of the 33rd ACM/IEEE International Conference on Automated Software Engineering},
-	year = {2018},
-	pages = {486--497},
-	numpages = {12}
-}
-@inproceedings{fan2018large,
-	author = {Fan, Lingling and Su, Ting and Chen, Sen and Meng, Guozhu and Liu, Yang and Xu, Lihua and Pu, Geguang and Su, Zhendong},
-	title = {Large-scale Analysis of Framework-specific Exceptions in Android Apps},
-	booktitle = {Proceedings of the 40th International Conference on Software Engineering},
-	series = {ICSE '18},
-	year = {2018},
-	pages = {408--419}
-}
-
-@article{Jaccard1901Etude,
-	title={Etude de la distribution florale dans une portion des Alpes et du Jura},
-	author={Jaccard, Paul},
-	journal={Bulletin De La Societe Vaudoise Des Sciences Naturelles},
-	volume={37},
-	number={142},
-	pages={547-579},
-	year={1901},
-}
-
-@inproceedings{aop,
-	author    = {Gregor Kiczales and
-	John Lamping and
-	Anurag Mendhekar and
-	Chris Maeda and
-	Cristina Videira Lopes and
-	Jean{-}Marc Loingtier and
-	John Irwin},
-	title     = {Aspect-Oriented Programming},
-	booktitle = {ECOOP},
-	pages     = {220--242},
-	year      = {1997},
-
-}
-
-@article{van2013dynamic,
-	title={Dynamic analysis of android malware},
-	author={Van Der Veen, Victor and Bos, Herbert and Rossow, Christian},
-	year={2013}
-}
-
-@inproceedings{droidscope,
-	title={DroidScope: Seamlessly Reconstructing the OS and Dalvik Semantic Views for Dynamic Android Malware Analysis.},
-	author={Yan, Lok-Kwong and Yin, Heng},
-	booktitle={USENIX security symposium},
-	pages={569--584},
-	year={2012}
-}
-
-@article{payet2012static,
-	title={Static analysis of Android programs},
-	author={Payet, {\'E}tienne and Spoto, Fausto},
-	journal={Information and Software Technology},
-	volume={54},
-	number={11},
-	pages={1192--1201},
-	year={2012},
-	publisher={Elsevier}
-}
-
-
-@inproceedings{rountev2014static,
-	title={Static reference analysis for GUI objects in Android software},
-	author={Rountev, Atanas and Yan, Dacong},
-	booktitle={Proceedings of Annual IEEE/ACM International Symposium on Code Generation and Optimization},
-	pages={143},
-	year={2014},
-	organization={ACM}
-}
-@inproceedings{chen2015simapp,
-	title={SimApp: A framework for detecting similar mobile applications by online kernel learning},
-	author={Chen, Ning and Hoi, Steven CH and Li, Shaohua and Xiao, Xiaokui},
-	booktitle={Proceedings of the Eighth ACM International Conference on Web Search and Data Mining},
-	pages={305--314},
-	year={2015},
-	organization={ACM}
-}
-@inproceedings{bu2017program,
-	title={When program analysis meets mobile security: an industrial study of misusing Android internet sockets},
-	author={Bu, Wenqi and Xue, Minhui and Xu, Lihua and Zhou, Yajin and Tang, Zhushou and Xie, Tao},
-	booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
-	pages={842--847},
-	year={2017},
-	organization={ACM}
-}
-
-
-@inproceedings{yang2013appintent,
-	title={Appintent: Analyzing sensitive data transmission in android for privacy leakage detection},
-	author={Yang, Zhemin and Yang, Min and Zhang, Yuan and Gu, Guofei and Ning, Peng and Wang, X Sean},
-	booktitle={Proceedings of the 2013 ACM SIGSAC conference on Computer \& communications security},
-	pages={1043--1054},
-	year={2013},
-	organization={ACM}
-}
-
-@inproceedings{pandita2013whyper,
-	title={WHYPER: Towards Automating Risk Assessment of Mobile Applications.},
-	author={Pandita, Rahul and Xiao, Xusheng and Yang, Wei and Enck, William and Xie, Tao},
-	booktitle={USENIX Security Symposium},
-	volume={2013},
-	year={2013}
-}
-
-@inproceedings{yang2015appcontext,
-	title={Appcontext: Differentiating malicious and benign mobile app behaviors using context},
-	author={Yang, Wei and Xiao, Xusheng and Andow, Benjamin and Li, Sihan and Xie, Tao and Enck, William},
-	booktitle={Proceedings of the 37th International Conference on Software Engineering-Volume 1},
-	pages={303--313},
-	year={2015},
-	organization={IEEE Press}
-}
-
-@inproceedings{chen2016mobile,
-	title={Mobile app tagging},
-	author={Chen, Ning and Hoi, Steven CH and Li, Shaohua and Xiao, Xiaokui},
-	booktitle={Proceedings of the Ninth ACM International Conference on Web Search and Data Mining},
-	pages={63--72},
-	year={2016},
-	organization={ACM}
-}
-
-
-@inproceedings{mirzaei2015exception,
-	title={Exception fault localization in Android applications},
-	author={Mirzaei, Hamed and Heydarnoori, Abbas},
-	booktitle={Mobile Software Engineering and Systems (MOBILESoft), 2015 2nd ACM International Conference on},
-	pages={156--157},
-	year={2015},
-	organization={IEEE}
-}
-
-
-@online{simpleperf:online,
-	author = {},
-	title = {Simpleperf, Android NDK, Android Developers},
-	url={https://developer.android.com/ndk/guides/simpleperf},
-	year = {2018},
-	lastaccessed = {July 28,2018}
-}
-@online{androguard:online,
-	title = {androguard/androguard: Reverse engineering, Malware and goodware analysis of Android applications ... and more (ninja !)},
-	url={https://github.com/androguard/androguard},
-	year = {2018},
-	lastaccessed = {July 28,2018}
-}
-
-@online{Activity2:online,
-	author = {},
-	title = {Activity  |  Android Developers},
-	url={https://developer.android.com/reference/android/app/Activity},
-	month = {09},
-	year = {2018},
-
-}
-
-@online{HandlerA26:online,
-	title = {Handler  |  Android Developers},
-	url={https://developer.android.com/reference/android/os/Handler},
-	year = {2018},
-	lastaccessed = {Step. 25, 2018}
-}
-@online{droidbox:online,
-	title = {pjlantz/droidbox: Dynamic analysis of Android apps},
-	url={https://github.com/pjlantz/droidbox},
-	year = {2018},
-	lastaccessed = {July 28,2018}
-}
-
-@online{ubernanoscope:online,
-	title = {uber/nanoscope: An extremely accurate Android method tracing tool.},
-	url={https://github.com/uber/nanoscope},
-	year = {2018},
-	lastaccessed = {July 28,2018}
-}
-
-
-@online{androguard:online,
-	title = {androguard/androguard: Reverse engineering, Malware and goodware analysis of Android applications ... and more (ninja !)},
-	url={https://github.com/androguard/androguard},
-	year = {2018},
-	lastaccessed = {July 28,2018}
-}
-
-@inproceedings{Jia2017Open,
-	title={Open Doors for Bob and Mallory: Open Port Usage in Android Apps and Security Implications},
-	author={Jia, Yunhan Jack and Chen, Qi Alfred and Lin, Yikai and Kong, Chao and Mao, Z. Morley},
-	booktitle={IEEE European Symposium on Security and Privacy},
-	pages={190-203},
-	year={2017},
-}
-
-@inproceedings{Shao2016The,
-	title={The Misuse of Android Unix Domain Sockets and Security Implications},
-	author={Shao, Yuru and Ott, Jason and Jia, Yunhan Jack and Qian, Zhiyun and Mao, Z. Morley},
-	booktitle={ACM Sigsac Conference on Computer and Communications Security},
-	pages={80-91},
-	year={2016},
-}
-@inproceedings{vallee2000optimizing,
-	title={Optimizing Java bytecode using the Soot framework: Is it feasible?},
-	author={Vall{\'e}e-Rai, Raja and Gagnon, Etienne and Hendren, Laurie and Lam, Patrick and Pominville, Patrice and Sundaresan, Vijay},
-	booktitle={International conference on compiler construction},
-	pages={18--34},
-	year={2000},
-	organization={Springer}
-}
-@inproceedings{reps1995precise,
-	title={Precise interprocedural dataflow analysis via graph reachability},
-	author={Reps, Thomas and Horwitz, Susan and Sagiv, Mooly},
-	booktitle={Proceedings of the 22nd ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
-	pages={49--61},
-	year={1995},
-	organization={ACM}
-}
-@inproceedings{barros2015static,
-	title={Static analysis of implicit control flow: Resolving Java reflection and Android intents (T)},
-	author={Barros, Paulo and Just, Ren{\'e} and Millstein, Suzanne and Vines, Paul and Dietl, Werner and Ernst, Michael D and others},
-	booktitle={Automated Software Engineering (ASE), 2015 30th IEEE/ACM International Conference on},
-	pages={669--679},
-	year={2015},
-	organization={IEEE}
-}
-@book{gosling2000java,
-	title={The Java language specification},
-	author={Gosling, James and Joy, Bill and Steele, Guy},
-	year={2000},
-	publisher={Addison-Wesley Professional}
-}
-
-@inproceedings{azim2013targeted,
-	title={Targeted and depth-first exploration for systematic testing of android apps},
-	author={Azim, Tanzirul and Neamtiu, Iulian},
-	booktitle={Acm Sigplan Notices},
-	volume={48},
-	number={10},
-	pages={641--660},
-	year={2013},
-	organization={ACM}
-}
-@inproceedings{yang2013grey,
-	title={A grey-box approach for automated GUI-model generation of mobile applications},
-	author={Yang, Wei and Prasad, Mukul R and Xie, Tao},
-	booktitle={International Conference on Fundamental Approaches to Software Engineering},
-	pages={250--265},
-	year={2013},
-	organization={Springer}
-}
-@inproceedings{hao2014puma,
-	title={PUMA: programmable UI-automation for large-scale dynamic analysis of mobile apps},
-	author={Hao, Shuai and Liu, Bin and Nath, Suman and Halfond, William GJ and Govindan, Ramesh},
-	booktitle={Proceedings of the 12th annual international conference on Mobile systems, applications, and services},
-	pages={204--217},
-	year={2014},
-	organization={ACM}
-}
-
-@article{amalfitano2015mobiguitar,
-	title={MobiGUITAR: Automated model-based testing of mobile apps},
-	author={Amalfitano, Domenico and Fasolino, Anna Rita and Tramontana, Porfirio and Ta, Bryan Dzung and Memon, Atif M},
-	journal={IEEE software},
-	volume={32},
-	number={5},
-	pages={53--59},
-	year={2015},
-	publisher={IEEE}
-}
-
-@inproceedings{QingGaoASE15,
-	title={Fixing recurring crash bugs via analyzing q\&a sites (T)},
-	author={Gao, Qing and Zhang, Hansheng and Wang, Jie and Xiong, Yingfei and Zhang, Lu and Mei, Hong},
-	booktitle={Automated Software Engineering (ASE), 2015 30th IEEE/ACM International Conference on},
-	pages={307--318},
-	year={2015},
-	organization={IEEE}
-}
-
-
-@book{androidSourceCode,
-	author = {何军},
-	title = {深入浅出Android源代码：基于Android 6.0和实际开发案例剖析},
-	type = {M},
-	location = {北京},
-	publisher = {电子工业出版社},
-	year = {2017}
-}
-
-@article{tan2018repairing,
-	title={Repairing Crashes in Android Apps},
-	author={Tan, Shin Hwei and Dong, Zhen and Gao, Xiang and Roychoudhury, Abhik},
-	year={2018}
-}
-@inproceedings{xia2015effective,
-	title={Effective real-time android application auditing},
-	author={Xia, Mingyuan and Gong, Lu and Lyu, Yuanhao and Qi, Zhengwei and Liu, Xue},
-	booktitle={Security and Privacy (SP), 2015 IEEE Symposium on},
-	pages={899--914},
-	year={2015},
-	organization={IEEE}
-}
-@inproceedings{lindorfer2015marvin,
-	title={Marvin: Efficient and comprehensive mobile app classification through static and dynamic analysis},
-	author={Lindorfer, Martina and Neugschwandtner, Matthias and Platzer, Christian},
-	booktitle={Computer Software and Applications Conference (COMPSAC), 2015 IEEE 39th Annual},
-	volume={2},
-	pages={422--433},
-	year={2015},
-	organization={IEEE}
-}
-
-@inproceedings{sadeghi2017patdroid,
-	title={Patdroid: permission-aware GUI testing of android},
-	author={Sadeghi, Alireza and Jabbarvand, Reyhaneh and Malek, Sam},
-	booktitle={Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering},
-	pages={220--232},
-	year={2017},
-	organization={ACM}
-}
-@online{maaaazan93,
-	author = {},
-	title = {maaaaz/androwarn: Yet another static code analyzer for malicious Android applications},
-	url={https://github.com/maaaaz/androwarn},
-	year = {2018}
-}
-@online{iBotPeac46,
-	author = {},
-	title = {iBotPeaches/Apktool: A tool for reverse engineering Android apk files},
-	url={https://github.com/iBotPeaches/Apktool},
-	year = {2018}
-}
-@online{javadeco45,
-	author = {},
-	title = {java-decompiler/jd-gui: A standalone Java Decompiler GUI},
-	url={https://github.com/java-decompiler/jd-gui},
-	month = {},
-	year = {2018}
-}
-
-@online{pxb1988d85,
-	author = {},
-	title = {pxb1988/dex2jar: Tools to work with android .dex and java .class files},
-	url={https://github.com/pxb1988/dex2jar},
-	month = {},
-	year = {2018}
-}
-@online{acpmInsp34,
-	author = {},
-	title = {ac-pm/Inspeckage: Android Package Inspector - dynamic analysis with api hooks, start unexported activities and more. (Xposed Module)},
-	url={https://github.com/ac-pm/Inspeckage},
-	month = {},
-	year = {2018}
-}
-@online{TheAspecJ,
-	author = {},
-	title = {The AspectJ Project | The Eclipse Foundation},
-	url={https://www.eclipse.org/aspectj/},
-	month = {},
-	year = {2018},
-	note = {(Accessed on 10/03/2018)}
+@inproceedings{kong2015autoreb,
+  title={Autoreb: Automatically understanding the review-to-behavior fidelity in android applications},
+  author={Kong, Deguang and Cen, Lei and Jin, Hongxia},
+  booktitle={Proceedings of the 22nd ACM SIGSAC Conference on Computer and Communications Security},
+  pages={530--541},
+  year={2015}
 }
 
 % Edwin
@@ -951,6 +202,15 @@
 	pages={377--388},
 	year={2016},
 	organization={ACM}
+}
+
+@inproceedings{wang2018android,
+  title={Why are android apps removed from google play? a large-scale empirical study},
+  author={Wang, Haoyu and Li, Hao and Li, Li and Guo, Yao and Xu, Guoai},
+  booktitle={2018 IEEE/ACM 15th International Conference on Mining Software Repositories (MSR)},
+  pages={231--242},
+  year={2018},
+  organization={IEEE}
 }
 
 @article{Andow2016ASO,
