--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -1,52 +1,50 @@
 \chapter{总结与展望}
 \label{chp:future}
+
 \section{总结}
+% In this paper we first introduce the concept of fake apps, and study specifically towards these apps.
+在本文中，我们率先引入了``仿冒应用''这个概念，然后对这一方面进行了专门的研究，还搜集了大量的相关样本以辅助调查。
+% To the best of our knowledge, we are the first to conduct a comprehensive empirical study on a large-scale fake apps.
+据我们所知，我们的课题是第一个针对仿冒应用进行大规模全面实证研究的研究。
 
+% To better understand the ecosystem nature of this type of apps, we obtained more than 150,000 data entries from real-world markets, observed and measured the fake samples among this dataset from several dimensions including certificate information, app size, app name and package name, time factor and so on.
+为了更好地了解这个类型的应用的生态环境，我们从现实世界中的各个应用市场中获取了超过15万个应用样本，并且从多个不同维度，对这个数据库里面的仿冒样本进行了观测和考察。
+这些维度包括了APK包中的安全证书信息、应用大小、应用名、包名和时间因素等等。
 
-%本文提出了一个基于GUI的自动化性能测试方法，并通过Java实现了其功能，开发了自动化性能测试框架PerDroid。
-本文提出并实现了一个可用于生成Android应用程序动态函数调用图的技术方案——RunDroid。
-RunDroid生产的函数调用图，可以准确的反映应用程序的执行过程，取得了有意义的研究成果。
-本文的主要工作如下：
+% Through our measurements we gain valuable experience on fake apps from several perspectives, findings like fake samples' naming tendency and fake developers' evasive strategies are inferred.
+然后，我们将收集到的数据分为了\emph{仿冒应用的基本特征}、\emph{针对仿冒样本的量化分析}和\emph{仿冒应用的发展轨迹}三个不同视角进行了测量，获得了不少宝贵的经验，并推断出了一些发现，比如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略。
+% To support our findings, we further present a few study cases which provide us a more detailed look into fake apps to back our discoveries on fake app ecosystem.
+为了佐证我们的发现，我们进一步给出了从数据集中挑选的几个研究案例。
+这几个案例进一步拉近了我们与仿冒距离，也为我们对仿冒应用生态系统的发现提供了实例支持。
 
+之后，我们还收集了部分仿冒样本在商场上对应的评论和评级，试图进而了解普通用户对这些仿冒应用持有的态度。
+但在研究过程中，我们发现仿冒应用受到的评价异常地高，于是我们使用了学界在近年来对排名欺诈的一些研究方法对仿冒应用的评论进行了检测。
+结果显示，刷好评的排名欺诈行为的确存在于应用市场中，而且在我们搜集到的仿冒应用评论中就有刷好评的痕迹。
 
-1） ：本文在传统的函数调用概念的基础上，提出了函数触发关系，用于描述两个方法之间的因果关系；
-并结合方法触发关系、方法对象等概念提出了拓展函数调用图的概念。
-
-2） RunDroid的设计与实现：
-RunDroid利用源程序代码插桩和运行时方法拦截相结合的方式，获取应用方法执行信息，构建函数调用图；并在此基础上，利用方法和对象的关系补全到调用图中的方法间触发关系，展现运行过程中的Android特性行为。
-
-
-3）静动态工具的实验结果对比：
-本文将RunDroid产生的动态函数调用图和FlowDroid产生的静态函数调用图进行对比。
-相比FlowDroid，RunDroid产生的函数调用图能够体现应用程序的执行过程，表现函数间的调用关系和触发关系，准确地还原Android组件的生命周期。
-%就Activity 生命周期及事件回调、多线程触发关系等角度和与传统静态分析工具FlowDroid产生的静态调用图做了对比分析，并分析两种技术的优劣。
-
-4）开源应用的统计实验：利用RunDroid构建开源Android应用的动态函数图，统计数据佐证了事件回调、Handler等函数间触发关系在Android应用中的普遍性。
-
-%反映方法间触发关系在Android系统上的常见性。
-
-
-5）RunDroid在错误定位领域的应用：
-相关实验结果实现，从RunDroid提供的函数关系信息可以反映出更多程序依赖信息，
-相比之前技术方案，方法间的因果关系模型更健全，实验的可靠性有所提升。
-%这使得我们的工具具备一定的学术研究价值。
-
+% We hope the lessons learned in this article are informative and helpful for mobile security practitioners in both academia and industry to improve the status quo.
+我们希望在这篇研究中能汲取到的经验和教训能够为移动安全产业的从业者（不论是在工业界还是学术界）提供足够的信息，以便于改善移动安全界的现状。
 
 \section{展望}
 
-虽然通过RunDroid还原得到的Android应用程序动态函数调用图，反映程序的运行时状态，但在实验过程中我们发现以下问题：
+在大规模分析的部分中，本文中用到了三个不同的角度分别探索仿冒应用的特征，但回顾探索过程，一些方法和步骤依然不够深入。
+如果能从以下两个角度再向仿冒应用入手研究，或许能有更多有所裨益的发现：
 
-1）RunDroid在捕获应用用户层方法时，采用的方案是源代码插桩方案。
-调用图构建的前置条件需要提供Android 应用的源代码，因此，RunDroid的运行对源代码高度依赖。
+1）应用图标。
+我们在进行案例研究的时候发现，不少仿冒应用的图标和原版官方应用的图标其实十分相像。
+因此，图标也可以是一个用于发掘/鉴别仿冒应用的突破口，我们也许可以从应用图标中挖掘到更多可用的信息与行为模式。
+碍于时间因素所限，本文研究中并未加入图像对比处理部分提取各APK包中的图标与官方应用的图标进行比对，但如果能研究出快速比对多个应用间图标、图像相似度的算法，定当对应用市场的安全监管筛选机制有所好处。
 
-2）在实验阶段，我们发现，当应用程序长时间运行时，应用程序会产生较多的日志。
-通常的，移动设备上的存储是有限的。
-因此，对于一些调用关系较为复杂的应用，RunDroid的日志方案比较容易遇到日志存储的瓶颈。
+2）应用内代码/文本/链接/ip分析。
+代码分析可以有效地剖析应用的行为，而相似的文本资源、链接等信息也可以提供各个App之间可能存在的关联关系。
+遗憾的是，从当前技术水平出发，仔细地对一个App进行完整而全面的静态分析所需时长太长，而动态分析需要测试样例驱动，自动化的动态测试工具往往未能深入拓展一个应用的大部分核心功能。
+因此，开发出快速的分析算法对App进行更深入的探索，就能挖掘出有关仿冒应用生态的更多信息。
 
-3）RunDroid中的运行时拦截器是基于Xposed框架实现的。Xposed框架并不是适用于所有的Android手机，在一定程度给RunDroid的实验环境提出了额外的要求。
+而在评论分析的部分中，也有可以继续发掘的部分。
+在现阶段，学界关于排名欺诈的研究一直在针对积极评价方面，但是对应用差评进行排名欺诈的相关研究却有待补充。
+刷好评可以提高应用评价提升应用排名，如果反其道而行之，用差评对目标App进行攻击，其实也可以降低目标App的评价，对其排名进行打击。
+另外，在实际上，用户给的差评中含有相当多的有用信息。
+用户对应用的不满、功能上的建议、bug的反馈，都可以反映在差评上。
+关于用户差评，还有很多的研究空间。
 
-整体上，本文提出的RunDroid较为准确地还原出Android应用程序在运行过程的函数调用图。
-针对RunDroid实验中发现的不足，RunDroid的后续工作可以从以下几个方面进行改进：
-利用字节码修改技术代替源代码修改方案以减少RunDroid运行过程中对源代码的依赖；
-引入基于JVMTI的调试环境，借助调试技术实现系统方法执行的拦截，摆脱对Xposed环境的依赖；
-通过静态分析技术确定运行过程的确定性路径，缩减待插桩的用户方法数量，进而减少运行时日志的产出量。
+总之，从整体上看，本文的工作还有很多可以深化的部分。
+我们希望本文能抛砖引玉，在让读者对移动应用黑色产业有更多认识的同时，激发读者对仿冒应用等方面的研究兴趣，并从上述几点出发，为后人带来更多深入而完善的相关研究。
